pkg/ibmvpc/examples/out/analysis_out/hub_n_spoke_1_all_vpcs__with_grouping.txt
Connectivity between VPCs connected by TGW tvpc-tgw (UID: crn:1311)
tvpc-spoke0/[iks-api-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.1.0.8],iks-clusterid:1[10.1.0.13],iks-registry-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.1.0.7]] => tvpc-spoke1/[iks-api-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.1.1.8],iks-clusterid:8[10.1.1.9],iks-node[10.1.1.5],iks-node[10.1.1.6],iks-registry-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.1.1.7],tvpc-spoke1-z1-worker[10.1.1.4]] : protocol: TCP,UDP dst-ports: 30000-32767
tvpc-spoke0/[iks-api-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.1.0.8],iks-clusterid:1[10.1.0.13],iks-registry-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.1.0.7]] => tvpc-spoke1/[iks-api-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.2.1.8],iks-clusterid:8[10.2.1.9],iks-node[10.2.1.5],iks-node[10.2.1.6],iks-registry-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.2.1.7],tvpc-spoke1-z2-worker[10.2.1.4]] : protocol: TCP,UDP dst-ports: 30000-32767
tvpc-spoke0/[iks-api-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.1.0.8],iks-clusterid:1[10.1.0.13],iks-registry-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.1.0.7]] => tvpc-spoke1/[iks-api-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.3.1.8],iks-clusterid:8[10.3.1.9],iks-node[10.3.1.5],iks-node[10.3.1.6],iks-registry-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.3.1.7],tvpc-spoke1-z3-worker[10.3.1.4]] : protocol: TCP,UDP dst-ports: 30000-32767
tvpc-spoke0/[iks-api-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.1.0.8],iks-clusterid:1[10.1.0.13],iks-registry-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.1.0.7]] => tvpc-spoke1/kube-clusterid:8-c67f13d52fff45d7bdca157530557243[LoadBalancer] : protocol: TCP dst-ports: 30000-32767 * 
tvpc-spoke0/[iks-api-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.1.0.8],iks-clusterid:1[10.1.0.13],iks-registry-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.1.0.7]] => tvpc-spoke1/kube-clusterid:8-c67f13d52fff45d7bdca157530557243[LoadBalancer] : protocol: UDP dst-ports: 30000-32767
tvpc-spoke0/[iks-api-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.1.0.8],iks-clusterid:1[10.1.0.13],iks-registry-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.1.0.7]] => tvpc-spoke1/server1-lb[LoadBalancer] : protocol: TCP dst-ports: 30000-32767 * 
tvpc-spoke0/[iks-api-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.1.0.8],iks-clusterid:1[10.1.0.13],iks-registry-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.1.0.7]] => tvpc-spoke1/server1-lb[LoadBalancer] : protocol: UDP dst-ports: 30000-32767
tvpc-spoke0/[iks-api-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.1.0.8],iks-clusterid:1[10.1.0.13],iks-registry-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.1.0.7]] => tvpc-transit/tvpc-fw-z1-s3-0[10.1.15.196] : protocol: TCP,UDP dst-ports: 30000-32767
tvpc-spoke0/[iks-api-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.1.0.8],iks-clusterid:1[10.1.0.13],iks-registry-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.1.0.7]] => tvpc-transit/tvpc-fw-z2-s3-0[10.2.15.196] : protocol: TCP,UDP dst-ports: 30000-32767
tvpc-spoke0/[iks-api-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.1.0.8],iks-clusterid:1[10.1.0.13],iks-registry-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.1.0.7]] => tvpc-transit/tvpc-fw-z3-s3-0[10.3.15.196] : protocol: TCP,UDP dst-ports: 30000-32767
tvpc-spoke0/[iks-api-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.1.0.8],iks-clusterid:1[10.1.0.13],iks-registry-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.1.0.7]] => tvpc-transit/tvpc-transit-z1-worker[10.1.15.4] : protocol: TCP,UDP dst-ports: 30000-32767
tvpc-spoke0/[iks-api-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.1.0.8],iks-clusterid:1[10.1.0.13],iks-registry-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.1.0.7]] => tvpc-transit/tvpc-transit-z2-worker[10.2.15.4] : protocol: TCP,UDP dst-ports: 30000-32767
tvpc-spoke0/[iks-api-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.1.0.8],iks-clusterid:1[10.1.0.13],iks-registry-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.1.0.7]] => tvpc-transit/tvpc-transit-z3-worker[10.3.15.4] : protocol: TCP,UDP dst-ports: 30000-32767
tvpc-spoke0/[iks-api-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.2.0.8],iks-clusterid:1[10.2.0.13],iks-registry-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.2.0.7]] => tvpc-spoke1/[iks-api-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.1.1.8],iks-clusterid:8[10.1.1.9],iks-node[10.1.1.5],iks-node[10.1.1.6],iks-registry-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.1.1.7],tvpc-spoke1-z1-worker[10.1.1.4]] : protocol: TCP,UDP dst-ports: 30000-32767
tvpc-spoke0/[iks-api-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.2.0.8],iks-clusterid:1[10.2.0.13],iks-registry-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.2.0.7]] => tvpc-spoke1/[iks-api-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.2.1.8],iks-clusterid:8[10.2.1.9],iks-node[10.2.1.5],iks-node[10.2.1.6],iks-registry-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.2.1.7],tvpc-spoke1-z2-worker[10.2.1.4]] : protocol: TCP,UDP dst-ports: 30000-32767
tvpc-spoke0/[iks-api-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.2.0.8],iks-clusterid:1[10.2.0.13],iks-registry-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.2.0.7]] => tvpc-spoke1/[iks-api-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.3.1.8],iks-clusterid:8[10.3.1.9],iks-node[10.3.1.5],iks-node[10.3.1.6],iks-registry-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.3.1.7],tvpc-spoke1-z3-worker[10.3.1.4]] : protocol: TCP,UDP dst-ports: 30000-32767
tvpc-spoke0/[iks-api-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.2.0.8],iks-clusterid:1[10.2.0.13],iks-registry-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.2.0.7]] => tvpc-spoke1/kube-clusterid:8-c67f13d52fff45d7bdca157530557243[LoadBalancer] : protocol: TCP dst-ports: 30000-32767 * 
tvpc-spoke0/[iks-api-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.2.0.8],iks-clusterid:1[10.2.0.13],iks-registry-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.2.0.7]] => tvpc-spoke1/kube-clusterid:8-c67f13d52fff45d7bdca157530557243[LoadBalancer] : protocol: UDP dst-ports: 30000-32767
tvpc-spoke0/[iks-api-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.2.0.8],iks-clusterid:1[10.2.0.13],iks-registry-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.2.0.7]] => tvpc-spoke1/server1-lb[LoadBalancer] : protocol: TCP dst-ports: 30000-32767 * 
tvpc-spoke0/[iks-api-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.2.0.8],iks-clusterid:1[10.2.0.13],iks-registry-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.2.0.7]] => tvpc-spoke1/server1-lb[LoadBalancer] : protocol: UDP dst-ports: 30000-32767
tvpc-spoke0/[iks-api-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.2.0.8],iks-clusterid:1[10.2.0.13],iks-registry-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.2.0.7]] => tvpc-transit/tvpc-fw-z1-s3-0[10.1.15.196] : protocol: TCP,UDP dst-ports: 30000-32767
tvpc-spoke0/[iks-api-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.2.0.8],iks-clusterid:1[10.2.0.13],iks-registry-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.2.0.7]] => tvpc-transit/tvpc-fw-z2-s3-0[10.2.15.196] : protocol: TCP,UDP dst-ports: 30000-32767
tvpc-spoke0/[iks-api-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.2.0.8],iks-clusterid:1[10.2.0.13],iks-registry-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.2.0.7]] => tvpc-transit/tvpc-fw-z3-s3-0[10.3.15.196] : protocol: TCP,UDP dst-ports: 30000-32767
tvpc-spoke0/[iks-api-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.2.0.8],iks-clusterid:1[10.2.0.13],iks-registry-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.2.0.7]] => tvpc-transit/tvpc-transit-z1-worker[10.1.15.4] : protocol: TCP,UDP dst-ports: 30000-32767
tvpc-spoke0/[iks-api-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.2.0.8],iks-clusterid:1[10.2.0.13],iks-registry-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.2.0.7]] => tvpc-transit/tvpc-transit-z2-worker[10.2.15.4] : protocol: TCP,UDP dst-ports: 30000-32767
tvpc-spoke0/[iks-api-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.2.0.8],iks-clusterid:1[10.2.0.13],iks-registry-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.2.0.7]] => tvpc-transit/tvpc-transit-z3-worker[10.3.15.4] : protocol: TCP,UDP dst-ports: 30000-32767
tvpc-spoke0/[iks-api-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.3.0.8],iks-clusterid:1[10.3.0.12],iks-registry-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.3.0.7]] => tvpc-spoke1/[iks-api-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.1.1.8],iks-clusterid:8[10.1.1.9],iks-node[10.1.1.5],iks-node[10.1.1.6],iks-registry-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.1.1.7],tvpc-spoke1-z1-worker[10.1.1.4]] : protocol: TCP,UDP dst-ports: 30000-32767
tvpc-spoke0/[iks-api-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.3.0.8],iks-clusterid:1[10.3.0.12],iks-registry-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.3.0.7]] => tvpc-spoke1/[iks-api-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.2.1.8],iks-clusterid:8[10.2.1.9],iks-node[10.2.1.5],iks-node[10.2.1.6],iks-registry-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.2.1.7],tvpc-spoke1-z2-worker[10.2.1.4]] : protocol: TCP,UDP dst-ports: 30000-32767
tvpc-spoke0/[iks-api-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.3.0.8],iks-clusterid:1[10.3.0.12],iks-registry-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.3.0.7]] => tvpc-spoke1/[iks-api-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.3.1.8],iks-clusterid:8[10.3.1.9],iks-node[10.3.1.5],iks-node[10.3.1.6],iks-registry-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.3.1.7],tvpc-spoke1-z3-worker[10.3.1.4]] : protocol: TCP,UDP dst-ports: 30000-32767
tvpc-spoke0/[iks-api-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.3.0.8],iks-clusterid:1[10.3.0.12],iks-registry-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.3.0.7]] => tvpc-spoke1/kube-clusterid:8-c67f13d52fff45d7bdca157530557243[LoadBalancer] : protocol: TCP dst-ports: 30000-32767 * 
tvpc-spoke0/[iks-api-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.3.0.8],iks-clusterid:1[10.3.0.12],iks-registry-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.3.0.7]] => tvpc-spoke1/kube-clusterid:8-c67f13d52fff45d7bdca157530557243[LoadBalancer] : protocol: UDP dst-ports: 30000-32767
tvpc-spoke0/[iks-api-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.3.0.8],iks-clusterid:1[10.3.0.12],iks-registry-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.3.0.7]] => tvpc-spoke1/server1-lb[LoadBalancer] : protocol: TCP dst-ports: 30000-32767 * 
tvpc-spoke0/[iks-api-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.3.0.8],iks-clusterid:1[10.3.0.12],iks-registry-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.3.0.7]] => tvpc-spoke1/server1-lb[LoadBalancer] : protocol: UDP dst-ports: 30000-32767
tvpc-spoke0/[iks-api-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.3.0.8],iks-clusterid:1[10.3.0.12],iks-registry-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.3.0.7]] => tvpc-transit/tvpc-fw-z1-s3-0[10.1.15.196] : protocol: TCP,UDP dst-ports: 30000-32767
tvpc-spoke0/[iks-api-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.3.0.8],iks-clusterid:1[10.3.0.12],iks-registry-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.3.0.7]] => tvpc-transit/tvpc-fw-z2-s3-0[10.2.15.196] : protocol: TCP,UDP dst-ports: 30000-32767
tvpc-spoke0/[iks-api-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.3.0.8],iks-clusterid:1[10.3.0.12],iks-registry-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.3.0.7]] => tvpc-transit/tvpc-fw-z3-s3-0[10.3.15.196] : protocol: TCP,UDP dst-ports: 30000-32767
tvpc-spoke0/[iks-api-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.3.0.8],iks-clusterid:1[10.3.0.12],iks-registry-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.3.0.7]] => tvpc-transit/tvpc-transit-z1-worker[10.1.15.4] : protocol: TCP,UDP dst-ports: 30000-32767
tvpc-spoke0/[iks-api-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.3.0.8],iks-clusterid:1[10.3.0.12],iks-registry-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.3.0.7]] => tvpc-transit/tvpc-transit-z2-worker[10.2.15.4] : protocol: TCP,UDP dst-ports: 30000-32767
tvpc-spoke0/[iks-api-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.3.0.8],iks-clusterid:1[10.3.0.12],iks-registry-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.3.0.7]] => tvpc-transit/tvpc-transit-z3-worker[10.3.15.4] : protocol: TCP,UDP dst-ports: 30000-32767
tvpc-spoke0/[iks-node[10.1.0.11],iks-node[10.1.0.12],tvpc-spoke0-z1-worker[10.1.0.4]] => tvpc-spoke1/[iks-api-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.1.1.8],iks-clusterid:8[10.1.1.9],iks-registry-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.1.1.7]] : protocol: TCP,UDP
tvpc-spoke0/[iks-node[10.1.0.11],iks-node[10.1.0.12],tvpc-spoke0-z1-worker[10.1.0.4]] => tvpc-spoke1/[iks-api-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.2.1.8],iks-clusterid:8[10.2.1.9],iks-registry-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.2.1.7]] : protocol: TCP,UDP
tvpc-spoke0/[iks-node[10.1.0.11],iks-node[10.1.0.12],tvpc-spoke0-z1-worker[10.1.0.4]] => tvpc-spoke1/[iks-api-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.3.1.8],iks-clusterid:8[10.3.1.9],iks-registry-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.3.1.7]] : protocol: TCP,UDP
tvpc-spoke0/[iks-node[10.1.0.11],iks-node[10.1.0.12],tvpc-spoke0-z1-worker[10.1.0.4]] => tvpc-spoke1/[iks-node[10.1.1.5],iks-node[10.1.1.6],tvpc-spoke1-z1-worker[10.1.1.4]] : All Connections
tvpc-spoke0/[iks-node[10.1.0.11],iks-node[10.1.0.12],tvpc-spoke0-z1-worker[10.1.0.4]] => tvpc-spoke1/[iks-node[10.2.1.5],iks-node[10.2.1.6],tvpc-spoke1-z2-worker[10.2.1.4]] : All Connections
tvpc-spoke0/[iks-node[10.1.0.11],iks-node[10.1.0.12],tvpc-spoke0-z1-worker[10.1.0.4]] => tvpc-spoke1/[iks-node[10.3.1.5],iks-node[10.3.1.6],tvpc-spoke1-z3-worker[10.3.1.4]] : All Connections
tvpc-spoke0/[iks-node[10.1.0.11],iks-node[10.1.0.12],tvpc-spoke0-z1-worker[10.1.0.4]] => tvpc-spoke1/kube-clusterid:8-c67f13d52fff45d7bdca157530557243[LoadBalancer] : protocol: TCP * 
tvpc-spoke0/[iks-node[10.1.0.11],iks-node[10.1.0.12],tvpc-spoke0-z1-worker[10.1.0.4]] => tvpc-spoke1/kube-clusterid:8-c67f13d52fff45d7bdca157530557243[LoadBalancer] : protocol: UDP
tvpc-spoke0/[iks-node[10.1.0.11],iks-node[10.1.0.12],tvpc-spoke0-z1-worker[10.1.0.4]] => tvpc-spoke1/server1-lb[LoadBalancer] : protocol: TCP * 
tvpc-spoke0/[iks-node[10.1.0.11],iks-node[10.1.0.12],tvpc-spoke0-z1-worker[10.1.0.4]] => tvpc-spoke1/server1-lb[LoadBalancer] : protocol: UDP
tvpc-spoke0/[iks-node[10.1.0.11],iks-node[10.1.0.12],tvpc-spoke0-z1-worker[10.1.0.4]] => tvpc-transit/tvpc-fw-z1-s3-0[10.1.15.196] : All Connections
tvpc-spoke0/[iks-node[10.1.0.11],iks-node[10.1.0.12],tvpc-spoke0-z1-worker[10.1.0.4]] => tvpc-transit/tvpc-fw-z2-s3-0[10.2.15.196] : All Connections
tvpc-spoke0/[iks-node[10.1.0.11],iks-node[10.1.0.12],tvpc-spoke0-z1-worker[10.1.0.4]] => tvpc-transit/tvpc-fw-z3-s3-0[10.3.15.196] : All Connections
tvpc-spoke0/[iks-node[10.1.0.11],iks-node[10.1.0.12],tvpc-spoke0-z1-worker[10.1.0.4]] => tvpc-transit/tvpc-transit-z1-worker[10.1.15.4] : All Connections
tvpc-spoke0/[iks-node[10.1.0.11],iks-node[10.1.0.12],tvpc-spoke0-z1-worker[10.1.0.4]] => tvpc-transit/tvpc-transit-z2-worker[10.2.15.4] : All Connections
tvpc-spoke0/[iks-node[10.1.0.11],iks-node[10.1.0.12],tvpc-spoke0-z1-worker[10.1.0.4]] => tvpc-transit/tvpc-transit-z3-worker[10.3.15.4] : All Connections
tvpc-spoke0/[iks-node[10.2.0.11],iks-node[10.2.0.12],tvpc-spoke0-z2-worker[10.2.0.4]] => tvpc-spoke1/[iks-api-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.1.1.8],iks-clusterid:8[10.1.1.9],iks-registry-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.1.1.7]] : protocol: TCP,UDP
tvpc-spoke0/[iks-node[10.2.0.11],iks-node[10.2.0.12],tvpc-spoke0-z2-worker[10.2.0.4]] => tvpc-spoke1/[iks-api-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.2.1.8],iks-clusterid:8[10.2.1.9],iks-registry-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.2.1.7]] : protocol: TCP,UDP
tvpc-spoke0/[iks-node[10.2.0.11],iks-node[10.2.0.12],tvpc-spoke0-z2-worker[10.2.0.4]] => tvpc-spoke1/[iks-api-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.3.1.8],iks-clusterid:8[10.3.1.9],iks-registry-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.3.1.7]] : protocol: TCP,UDP
tvpc-spoke0/[iks-node[10.2.0.11],iks-node[10.2.0.12],tvpc-spoke0-z2-worker[10.2.0.4]] => tvpc-spoke1/[iks-node[10.1.1.5],iks-node[10.1.1.6],tvpc-spoke1-z1-worker[10.1.1.4]] : All Connections
tvpc-spoke0/[iks-node[10.2.0.11],iks-node[10.2.0.12],tvpc-spoke0-z2-worker[10.2.0.4]] => tvpc-spoke1/[iks-node[10.2.1.5],iks-node[10.2.1.6],tvpc-spoke1-z2-worker[10.2.1.4]] : All Connections
tvpc-spoke0/[iks-node[10.2.0.11],iks-node[10.2.0.12],tvpc-spoke0-z2-worker[10.2.0.4]] => tvpc-spoke1/[iks-node[10.3.1.5],iks-node[10.3.1.6],tvpc-spoke1-z3-worker[10.3.1.4]] : All Connections
tvpc-spoke0/[iks-node[10.2.0.11],iks-node[10.2.0.12],tvpc-spoke0-z2-worker[10.2.0.4]] => tvpc-spoke1/kube-clusterid:8-c67f13d52fff45d7bdca157530557243[LoadBalancer] : protocol: TCP * 
tvpc-spoke0/[iks-node[10.2.0.11],iks-node[10.2.0.12],tvpc-spoke0-z2-worker[10.2.0.4]] => tvpc-spoke1/kube-clusterid:8-c67f13d52fff45d7bdca157530557243[LoadBalancer] : protocol: UDP
tvpc-spoke0/[iks-node[10.2.0.11],iks-node[10.2.0.12],tvpc-spoke0-z2-worker[10.2.0.4]] => tvpc-spoke1/server1-lb[LoadBalancer] : protocol: TCP * 
tvpc-spoke0/[iks-node[10.2.0.11],iks-node[10.2.0.12],tvpc-spoke0-z2-worker[10.2.0.4]] => tvpc-spoke1/server1-lb[LoadBalancer] : protocol: UDP
tvpc-spoke0/[iks-node[10.2.0.11],iks-node[10.2.0.12],tvpc-spoke0-z2-worker[10.2.0.4]] => tvpc-transit/tvpc-fw-z1-s3-0[10.1.15.196] : All Connections
tvpc-spoke0/[iks-node[10.2.0.11],iks-node[10.2.0.12],tvpc-spoke0-z2-worker[10.2.0.4]] => tvpc-transit/tvpc-fw-z2-s3-0[10.2.15.196] : All Connections
tvpc-spoke0/[iks-node[10.2.0.11],iks-node[10.2.0.12],tvpc-spoke0-z2-worker[10.2.0.4]] => tvpc-transit/tvpc-fw-z3-s3-0[10.3.15.196] : All Connections
tvpc-spoke0/[iks-node[10.2.0.11],iks-node[10.2.0.12],tvpc-spoke0-z2-worker[10.2.0.4]] => tvpc-transit/tvpc-transit-z1-worker[10.1.15.4] : All Connections
tvpc-spoke0/[iks-node[10.2.0.11],iks-node[10.2.0.12],tvpc-spoke0-z2-worker[10.2.0.4]] => tvpc-transit/tvpc-transit-z2-worker[10.2.15.4] : All Connections
tvpc-spoke0/[iks-node[10.2.0.11],iks-node[10.2.0.12],tvpc-spoke0-z2-worker[10.2.0.4]] => tvpc-transit/tvpc-transit-z3-worker[10.3.15.4] : All Connections
tvpc-spoke0/[iks-node[10.3.0.10],iks-node[10.3.0.11],tvpc-spoke0-z3-worker[10.3.0.4]] => tvpc-spoke1/[iks-api-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.1.1.8],iks-clusterid:8[10.1.1.9],iks-registry-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.1.1.7]] : protocol: TCP,UDP
tvpc-spoke0/[iks-node[10.3.0.10],iks-node[10.3.0.11],tvpc-spoke0-z3-worker[10.3.0.4]] => tvpc-spoke1/[iks-api-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.2.1.8],iks-clusterid:8[10.2.1.9],iks-registry-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.2.1.7]] : protocol: TCP,UDP
tvpc-spoke0/[iks-node[10.3.0.10],iks-node[10.3.0.11],tvpc-spoke0-z3-worker[10.3.0.4]] => tvpc-spoke1/[iks-api-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.3.1.8],iks-clusterid:8[10.3.1.9],iks-registry-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.3.1.7]] : protocol: TCP,UDP
tvpc-spoke0/[iks-node[10.3.0.10],iks-node[10.3.0.11],tvpc-spoke0-z3-worker[10.3.0.4]] => tvpc-spoke1/[iks-node[10.1.1.5],iks-node[10.1.1.6],tvpc-spoke1-z1-worker[10.1.1.4]] : All Connections
tvpc-spoke0/[iks-node[10.3.0.10],iks-node[10.3.0.11],tvpc-spoke0-z3-worker[10.3.0.4]] => tvpc-spoke1/[iks-node[10.2.1.5],iks-node[10.2.1.6],tvpc-spoke1-z2-worker[10.2.1.4]] : All Connections
tvpc-spoke0/[iks-node[10.3.0.10],iks-node[10.3.0.11],tvpc-spoke0-z3-worker[10.3.0.4]] => tvpc-spoke1/[iks-node[10.3.1.5],iks-node[10.3.1.6],tvpc-spoke1-z3-worker[10.3.1.4]] : All Connections
tvpc-spoke0/[iks-node[10.3.0.10],iks-node[10.3.0.11],tvpc-spoke0-z3-worker[10.3.0.4]] => tvpc-spoke1/kube-clusterid:8-c67f13d52fff45d7bdca157530557243[LoadBalancer] : protocol: TCP * 
tvpc-spoke0/[iks-node[10.3.0.10],iks-node[10.3.0.11],tvpc-spoke0-z3-worker[10.3.0.4]] => tvpc-spoke1/kube-clusterid:8-c67f13d52fff45d7bdca157530557243[LoadBalancer] : protocol: UDP
tvpc-spoke0/[iks-node[10.3.0.10],iks-node[10.3.0.11],tvpc-spoke0-z3-worker[10.3.0.4]] => tvpc-spoke1/server1-lb[LoadBalancer] : protocol: TCP * 
tvpc-spoke0/[iks-node[10.3.0.10],iks-node[10.3.0.11],tvpc-spoke0-z3-worker[10.3.0.4]] => tvpc-spoke1/server1-lb[LoadBalancer] : protocol: UDP
tvpc-spoke0/[iks-node[10.3.0.10],iks-node[10.3.0.11],tvpc-spoke0-z3-worker[10.3.0.4]] => tvpc-transit/tvpc-fw-z1-s3-0[10.1.15.196] : All Connections
tvpc-spoke0/[iks-node[10.3.0.10],iks-node[10.3.0.11],tvpc-spoke0-z3-worker[10.3.0.4]] => tvpc-transit/tvpc-fw-z2-s3-0[10.2.15.196] : All Connections
tvpc-spoke0/[iks-node[10.3.0.10],iks-node[10.3.0.11],tvpc-spoke0-z3-worker[10.3.0.4]] => tvpc-transit/tvpc-fw-z3-s3-0[10.3.15.196] : All Connections
tvpc-spoke0/[iks-node[10.3.0.10],iks-node[10.3.0.11],tvpc-spoke0-z3-worker[10.3.0.4]] => tvpc-transit/tvpc-transit-z1-worker[10.1.15.4] : All Connections
tvpc-spoke0/[iks-node[10.3.0.10],iks-node[10.3.0.11],tvpc-spoke0-z3-worker[10.3.0.4]] => tvpc-transit/tvpc-transit-z2-worker[10.2.15.4] : All Connections
tvpc-spoke0/[iks-node[10.3.0.10],iks-node[10.3.0.11],tvpc-spoke0-z3-worker[10.3.0.4]] => tvpc-transit/tvpc-transit-z3-worker[10.3.15.4] : All Connections
tvpc-spoke1/[iks-api-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.1.1.8],iks-clusterid:8[10.1.1.9],iks-registry-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.1.1.7]] => tvpc-spoke0/[iks-api-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.1.0.8],iks-clusterid:1[10.1.0.13],iks-node[10.1.0.11],iks-node[10.1.0.12],iks-registry-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.1.0.7],tvpc-spoke0-z1-worker[10.1.0.4]] : protocol: TCP,UDP dst-ports: 30000-32767
tvpc-spoke1/[iks-api-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.1.1.8],iks-clusterid:8[10.1.1.9],iks-registry-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.1.1.7]] => tvpc-spoke0/[iks-api-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.2.0.8],iks-clusterid:1[10.2.0.13],iks-node[10.2.0.11],iks-node[10.2.0.12],iks-registry-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.2.0.7],tvpc-spoke0-z2-worker[10.2.0.4]] : protocol: TCP,UDP dst-ports: 30000-32767
tvpc-spoke1/[iks-api-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.1.1.8],iks-clusterid:8[10.1.1.9],iks-registry-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.1.1.7]] => tvpc-spoke0/[iks-api-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.3.0.8],iks-clusterid:1[10.3.0.12],iks-node[10.3.0.10],iks-node[10.3.0.11],iks-registry-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.3.0.7],tvpc-spoke0-z3-worker[10.3.0.4]] : protocol: TCP,UDP dst-ports: 30000-32767
tvpc-spoke1/[iks-api-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.1.1.8],iks-clusterid:8[10.1.1.9],iks-registry-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.1.1.7]] => tvpc-spoke0/kube-clusterid:1-124eeb9c05a2412c9c141445301ed38b[LoadBalancer] : protocol: TCP dst-ports: 30000-32767 * 
tvpc-spoke1/[iks-api-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.1.1.8],iks-clusterid:8[10.1.1.9],iks-registry-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.1.1.7]] => tvpc-spoke0/kube-clusterid:1-124eeb9c05a2412c9c141445301ed38b[LoadBalancer] : protocol: UDP dst-ports: 30000-32767
tvpc-spoke1/[iks-api-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.1.1.8],iks-clusterid:8[10.1.1.9],iks-registry-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.1.1.7]] => tvpc-spoke0/server-lb[LoadBalancer] : protocol: TCP dst-ports: 30000-32767 * 
tvpc-spoke1/[iks-api-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.1.1.8],iks-clusterid:8[10.1.1.9],iks-registry-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.1.1.7]] => tvpc-spoke0/server-lb[LoadBalancer] : protocol: UDP dst-ports: 30000-32767
tvpc-spoke1/[iks-api-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.1.1.8],iks-clusterid:8[10.1.1.9],iks-registry-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.1.1.7]] => tvpc-transit/tvpc-fw-z1-s3-0[10.1.15.196] : protocol: TCP,UDP dst-ports: 30000-32767
tvpc-spoke1/[iks-api-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.1.1.8],iks-clusterid:8[10.1.1.9],iks-registry-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.1.1.7]] => tvpc-transit/tvpc-fw-z2-s3-0[10.2.15.196] : protocol: TCP,UDP dst-ports: 30000-32767
tvpc-spoke1/[iks-api-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.1.1.8],iks-clusterid:8[10.1.1.9],iks-registry-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.1.1.7]] => tvpc-transit/tvpc-fw-z3-s3-0[10.3.15.196] : protocol: TCP,UDP dst-ports: 30000-32767
tvpc-spoke1/[iks-api-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.1.1.8],iks-clusterid:8[10.1.1.9],iks-registry-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.1.1.7]] => tvpc-transit/tvpc-transit-z1-worker[10.1.15.4] : protocol: TCP,UDP dst-ports: 30000-32767
tvpc-spoke1/[iks-api-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.1.1.8],iks-clusterid:8[10.1.1.9],iks-registry-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.1.1.7]] => tvpc-transit/tvpc-transit-z2-worker[10.2.15.4] : protocol: TCP,UDP dst-ports: 30000-32767
tvpc-spoke1/[iks-api-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.1.1.8],iks-clusterid:8[10.1.1.9],iks-registry-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.1.1.7]] => tvpc-transit/tvpc-transit-z3-worker[10.3.15.4] : protocol: TCP,UDP dst-ports: 30000-32767
tvpc-spoke1/[iks-api-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.2.1.8],iks-clusterid:8[10.2.1.9],iks-registry-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.2.1.7]] => tvpc-spoke0/[iks-api-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.1.0.8],iks-clusterid:1[10.1.0.13],iks-node[10.1.0.11],iks-node[10.1.0.12],iks-registry-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.1.0.7],tvpc-spoke0-z1-worker[10.1.0.4]] : protocol: TCP,UDP dst-ports: 30000-32767
tvpc-spoke1/[iks-api-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.2.1.8],iks-clusterid:8[10.2.1.9],iks-registry-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.2.1.7]] => tvpc-spoke0/[iks-api-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.2.0.8],iks-clusterid:1[10.2.0.13],iks-node[10.2.0.11],iks-node[10.2.0.12],iks-registry-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.2.0.7],tvpc-spoke0-z2-worker[10.2.0.4]] : protocol: TCP,UDP dst-ports: 30000-32767
tvpc-spoke1/[iks-api-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.2.1.8],iks-clusterid:8[10.2.1.9],iks-registry-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.2.1.7]] => tvpc-spoke0/[iks-api-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.3.0.8],iks-clusterid:1[10.3.0.12],iks-node[10.3.0.10],iks-node[10.3.0.11],iks-registry-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.3.0.7],tvpc-spoke0-z3-worker[10.3.0.4]] : protocol: TCP,UDP dst-ports: 30000-32767
tvpc-spoke1/[iks-api-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.2.1.8],iks-clusterid:8[10.2.1.9],iks-registry-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.2.1.7]] => tvpc-spoke0/kube-clusterid:1-124eeb9c05a2412c9c141445301ed38b[LoadBalancer] : protocol: TCP dst-ports: 30000-32767 * 
tvpc-spoke1/[iks-api-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.2.1.8],iks-clusterid:8[10.2.1.9],iks-registry-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.2.1.7]] => tvpc-spoke0/kube-clusterid:1-124eeb9c05a2412c9c141445301ed38b[LoadBalancer] : protocol: UDP dst-ports: 30000-32767
tvpc-spoke1/[iks-api-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.2.1.8],iks-clusterid:8[10.2.1.9],iks-registry-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.2.1.7]] => tvpc-spoke0/server-lb[LoadBalancer] : protocol: TCP dst-ports: 30000-32767 * 
tvpc-spoke1/[iks-api-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.2.1.8],iks-clusterid:8[10.2.1.9],iks-registry-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.2.1.7]] => tvpc-spoke0/server-lb[LoadBalancer] : protocol: UDP dst-ports: 30000-32767
tvpc-spoke1/[iks-api-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.2.1.8],iks-clusterid:8[10.2.1.9],iks-registry-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.2.1.7]] => tvpc-transit/tvpc-fw-z1-s3-0[10.1.15.196] : protocol: TCP,UDP dst-ports: 30000-32767
tvpc-spoke1/[iks-api-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.2.1.8],iks-clusterid:8[10.2.1.9],iks-registry-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.2.1.7]] => tvpc-transit/tvpc-fw-z2-s3-0[10.2.15.196] : protocol: TCP,UDP dst-ports: 30000-32767
tvpc-spoke1/[iks-api-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.2.1.8],iks-clusterid:8[10.2.1.9],iks-registry-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.2.1.7]] => tvpc-transit/tvpc-fw-z3-s3-0[10.3.15.196] : protocol: TCP,UDP dst-ports: 30000-32767
tvpc-spoke1/[iks-api-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.2.1.8],iks-clusterid:8[10.2.1.9],iks-registry-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.2.1.7]] => tvpc-transit/tvpc-transit-z1-worker[10.1.15.4] : protocol: TCP,UDP dst-ports: 30000-32767
tvpc-spoke1/[iks-api-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.2.1.8],iks-clusterid:8[10.2.1.9],iks-registry-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.2.1.7]] => tvpc-transit/tvpc-transit-z2-worker[10.2.15.4] : protocol: TCP,UDP dst-ports: 30000-32767
tvpc-spoke1/[iks-api-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.2.1.8],iks-clusterid:8[10.2.1.9],iks-registry-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.2.1.7]] => tvpc-transit/tvpc-transit-z3-worker[10.3.15.4] : protocol: TCP,UDP dst-ports: 30000-32767
tvpc-spoke1/[iks-api-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.3.1.8],iks-clusterid:8[10.3.1.9],iks-registry-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.3.1.7]] => tvpc-spoke0/[iks-api-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.1.0.8],iks-clusterid:1[10.1.0.13],iks-node[10.1.0.11],iks-node[10.1.0.12],iks-registry-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.1.0.7],tvpc-spoke0-z1-worker[10.1.0.4]] : protocol: TCP,UDP dst-ports: 30000-32767
tvpc-spoke1/[iks-api-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.3.1.8],iks-clusterid:8[10.3.1.9],iks-registry-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.3.1.7]] => tvpc-spoke0/[iks-api-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.2.0.8],iks-clusterid:1[10.2.0.13],iks-node[10.2.0.11],iks-node[10.2.0.12],iks-registry-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.2.0.7],tvpc-spoke0-z2-worker[10.2.0.4]] : protocol: TCP,UDP dst-ports: 30000-32767
tvpc-spoke1/[iks-api-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.3.1.8],iks-clusterid:8[10.3.1.9],iks-registry-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.3.1.7]] => tvpc-spoke0/[iks-api-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.3.0.8],iks-clusterid:1[10.3.0.12],iks-node[10.3.0.10],iks-node[10.3.0.11],iks-registry-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.3.0.7],tvpc-spoke0-z3-worker[10.3.0.4]] : protocol: TCP,UDP dst-ports: 30000-32767
tvpc-spoke1/[iks-api-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.3.1.8],iks-clusterid:8[10.3.1.9],iks-registry-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.3.1.7]] => tvpc-spoke0/kube-clusterid:1-124eeb9c05a2412c9c141445301ed38b[LoadBalancer] : protocol: TCP dst-ports: 30000-32767 * 
tvpc-spoke1/[iks-api-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.3.1.8],iks-clusterid:8[10.3.1.9],iks-registry-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.3.1.7]] => tvpc-spoke0/kube-clusterid:1-124eeb9c05a2412c9c141445301ed38b[LoadBalancer] : protocol: UDP dst-ports: 30000-32767
tvpc-spoke1/[iks-api-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.3.1.8],iks-clusterid:8[10.3.1.9],iks-registry-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.3.1.7]] => tvpc-spoke0/server-lb[LoadBalancer] : protocol: TCP dst-ports: 30000-32767 * 
tvpc-spoke1/[iks-api-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.3.1.8],iks-clusterid:8[10.3.1.9],iks-registry-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.3.1.7]] => tvpc-spoke0/server-lb[LoadBalancer] : protocol: UDP dst-ports: 30000-32767
tvpc-spoke1/[iks-api-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.3.1.8],iks-clusterid:8[10.3.1.9],iks-registry-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.3.1.7]] => tvpc-transit/tvpc-fw-z1-s3-0[10.1.15.196] : protocol: TCP,UDP dst-ports: 30000-32767
tvpc-spoke1/[iks-api-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.3.1.8],iks-clusterid:8[10.3.1.9],iks-registry-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.3.1.7]] => tvpc-transit/tvpc-fw-z2-s3-0[10.2.15.196] : protocol: TCP,UDP dst-ports: 30000-32767
tvpc-spoke1/[iks-api-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.3.1.8],iks-clusterid:8[10.3.1.9],iks-registry-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.3.1.7]] => tvpc-transit/tvpc-fw-z3-s3-0[10.3.15.196] : protocol: TCP,UDP dst-ports: 30000-32767
tvpc-spoke1/[iks-api-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.3.1.8],iks-clusterid:8[10.3.1.9],iks-registry-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.3.1.7]] => tvpc-transit/tvpc-transit-z1-worker[10.1.15.4] : protocol: TCP,UDP dst-ports: 30000-32767
tvpc-spoke1/[iks-api-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.3.1.8],iks-clusterid:8[10.3.1.9],iks-registry-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.3.1.7]] => tvpc-transit/tvpc-transit-z2-worker[10.2.15.4] : protocol: TCP,UDP dst-ports: 30000-32767
tvpc-spoke1/[iks-api-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.3.1.8],iks-clusterid:8[10.3.1.9],iks-registry-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.3.1.7]] => tvpc-transit/tvpc-transit-z3-worker[10.3.15.4] : protocol: TCP,UDP dst-ports: 30000-32767
tvpc-spoke1/[iks-node[10.1.1.5],iks-node[10.1.1.6],tvpc-spoke1-z1-worker[10.1.1.4]] => tvpc-spoke0/[iks-api-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.1.0.8],iks-clusterid:1[10.1.0.13],iks-registry-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.1.0.7]] : protocol: TCP,UDP
tvpc-spoke1/[iks-node[10.1.1.5],iks-node[10.1.1.6],tvpc-spoke1-z1-worker[10.1.1.4]] => tvpc-spoke0/[iks-api-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.2.0.8],iks-clusterid:1[10.2.0.13],iks-registry-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.2.0.7]] : protocol: TCP,UDP
tvpc-spoke1/[iks-node[10.1.1.5],iks-node[10.1.1.6],tvpc-spoke1-z1-worker[10.1.1.4]] => tvpc-spoke0/[iks-api-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.3.0.8],iks-clusterid:1[10.3.0.12],iks-registry-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.3.0.7]] : protocol: TCP,UDP
tvpc-spoke1/[iks-node[10.1.1.5],iks-node[10.1.1.6],tvpc-spoke1-z1-worker[10.1.1.4]] => tvpc-spoke0/[iks-node[10.1.0.11],iks-node[10.1.0.12],tvpc-spoke0-z1-worker[10.1.0.4]] : All Connections
tvpc-spoke1/[iks-node[10.1.1.5],iks-node[10.1.1.6],tvpc-spoke1-z1-worker[10.1.1.4]] => tvpc-spoke0/[iks-node[10.2.0.11],iks-node[10.2.0.12],tvpc-spoke0-z2-worker[10.2.0.4]] : All Connections
tvpc-spoke1/[iks-node[10.1.1.5],iks-node[10.1.1.6],tvpc-spoke1-z1-worker[10.1.1.4]] => tvpc-spoke0/[iks-node[10.3.0.10],iks-node[10.3.0.11],tvpc-spoke0-z3-worker[10.3.0.4]] : All Connections
tvpc-spoke1/[iks-node[10.1.1.5],iks-node[10.1.1.6],tvpc-spoke1-z1-worker[10.1.1.4]] => tvpc-spoke0/kube-clusterid:1-124eeb9c05a2412c9c141445301ed38b[LoadBalancer] : protocol: TCP * 
tvpc-spoke1/[iks-node[10.1.1.5],iks-node[10.1.1.6],tvpc-spoke1-z1-worker[10.1.1.4]] => tvpc-spoke0/kube-clusterid:1-124eeb9c05a2412c9c141445301ed38b[LoadBalancer] : protocol: UDP
tvpc-spoke1/[iks-node[10.1.1.5],iks-node[10.1.1.6],tvpc-spoke1-z1-worker[10.1.1.4]] => tvpc-spoke0/server-lb[LoadBalancer] : protocol: TCP * 
tvpc-spoke1/[iks-node[10.1.1.5],iks-node[10.1.1.6],tvpc-spoke1-z1-worker[10.1.1.4]] => tvpc-spoke0/server-lb[LoadBalancer] : protocol: UDP
tvpc-spoke1/[iks-node[10.1.1.5],iks-node[10.1.1.6],tvpc-spoke1-z1-worker[10.1.1.4]] => tvpc-transit/tvpc-fw-z1-s3-0[10.1.15.196] : All Connections
tvpc-spoke1/[iks-node[10.1.1.5],iks-node[10.1.1.6],tvpc-spoke1-z1-worker[10.1.1.4]] => tvpc-transit/tvpc-fw-z2-s3-0[10.2.15.196] : All Connections
tvpc-spoke1/[iks-node[10.1.1.5],iks-node[10.1.1.6],tvpc-spoke1-z1-worker[10.1.1.4]] => tvpc-transit/tvpc-fw-z3-s3-0[10.3.15.196] : All Connections
tvpc-spoke1/[iks-node[10.1.1.5],iks-node[10.1.1.6],tvpc-spoke1-z1-worker[10.1.1.4]] => tvpc-transit/tvpc-transit-z1-worker[10.1.15.4] : All Connections
tvpc-spoke1/[iks-node[10.1.1.5],iks-node[10.1.1.6],tvpc-spoke1-z1-worker[10.1.1.4]] => tvpc-transit/tvpc-transit-z2-worker[10.2.15.4] : All Connections
tvpc-spoke1/[iks-node[10.1.1.5],iks-node[10.1.1.6],tvpc-spoke1-z1-worker[10.1.1.4]] => tvpc-transit/tvpc-transit-z3-worker[10.3.15.4] : All Connections
tvpc-spoke1/[iks-node[10.2.1.5],iks-node[10.2.1.6],tvpc-spoke1-z2-worker[10.2.1.4]] => tvpc-spoke0/[iks-api-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.1.0.8],iks-clusterid:1[10.1.0.13],iks-registry-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.1.0.7]] : protocol: TCP,UDP
tvpc-spoke1/[iks-node[10.2.1.5],iks-node[10.2.1.6],tvpc-spoke1-z2-worker[10.2.1.4]] => tvpc-spoke0/[iks-api-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.2.0.8],iks-clusterid:1[10.2.0.13],iks-registry-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.2.0.7]] : protocol: TCP,UDP
tvpc-spoke1/[iks-node[10.2.1.5],iks-node[10.2.1.6],tvpc-spoke1-z2-worker[10.2.1.4]] => tvpc-spoke0/[iks-api-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.3.0.8],iks-clusterid:1[10.3.0.12],iks-registry-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.3.0.7]] : protocol: TCP,UDP
tvpc-spoke1/[iks-node[10.2.1.5],iks-node[10.2.1.6],tvpc-spoke1-z2-worker[10.2.1.4]] => tvpc-spoke0/[iks-node[10.1.0.11],iks-node[10.1.0.12],tvpc-spoke0-z1-worker[10.1.0.4]] : All Connections
tvpc-spoke1/[iks-node[10.2.1.5],iks-node[10.2.1.6],tvpc-spoke1-z2-worker[10.2.1.4]] => tvpc-spoke0/[iks-node[10.2.0.11],iks-node[10.2.0.12],tvpc-spoke0-z2-worker[10.2.0.4]] : All Connections
tvpc-spoke1/[iks-node[10.2.1.5],iks-node[10.2.1.6],tvpc-spoke1-z2-worker[10.2.1.4]] => tvpc-spoke0/[iks-node[10.3.0.10],iks-node[10.3.0.11],tvpc-spoke0-z3-worker[10.3.0.4]] : All Connections
tvpc-spoke1/[iks-node[10.2.1.5],iks-node[10.2.1.6],tvpc-spoke1-z2-worker[10.2.1.4]] => tvpc-spoke0/kube-clusterid:1-124eeb9c05a2412c9c141445301ed38b[LoadBalancer] : protocol: TCP * 
tvpc-spoke1/[iks-node[10.2.1.5],iks-node[10.2.1.6],tvpc-spoke1-z2-worker[10.2.1.4]] => tvpc-spoke0/kube-clusterid:1-124eeb9c05a2412c9c141445301ed38b[LoadBalancer] : protocol: UDP
tvpc-spoke1/[iks-node[10.2.1.5],iks-node[10.2.1.6],tvpc-spoke1-z2-worker[10.2.1.4]] => tvpc-spoke0/server-lb[LoadBalancer] : protocol: TCP * 
tvpc-spoke1/[iks-node[10.2.1.5],iks-node[10.2.1.6],tvpc-spoke1-z2-worker[10.2.1.4]] => tvpc-spoke0/server-lb[LoadBalancer] : protocol: UDP
tvpc-spoke1/[iks-node[10.2.1.5],iks-node[10.2.1.6],tvpc-spoke1-z2-worker[10.2.1.4]] => tvpc-transit/tvpc-fw-z1-s3-0[10.1.15.196] : All Connections
tvpc-spoke1/[iks-node[10.2.1.5],iks-node[10.2.1.6],tvpc-spoke1-z2-worker[10.2.1.4]] => tvpc-transit/tvpc-fw-z2-s3-0[10.2.15.196] : All Connections
tvpc-spoke1/[iks-node[10.2.1.5],iks-node[10.2.1.6],tvpc-spoke1-z2-worker[10.2.1.4]] => tvpc-transit/tvpc-fw-z3-s3-0[10.3.15.196] : All Connections
tvpc-spoke1/[iks-node[10.2.1.5],iks-node[10.2.1.6],tvpc-spoke1-z2-worker[10.2.1.4]] => tvpc-transit/tvpc-transit-z1-worker[10.1.15.4] : All Connections
tvpc-spoke1/[iks-node[10.2.1.5],iks-node[10.2.1.6],tvpc-spoke1-z2-worker[10.2.1.4]] => tvpc-transit/tvpc-transit-z2-worker[10.2.15.4] : All Connections
tvpc-spoke1/[iks-node[10.2.1.5],iks-node[10.2.1.6],tvpc-spoke1-z2-worker[10.2.1.4]] => tvpc-transit/tvpc-transit-z3-worker[10.3.15.4] : All Connections
tvpc-spoke1/[iks-node[10.3.1.5],iks-node[10.3.1.6],tvpc-spoke1-z3-worker[10.3.1.4]] => tvpc-spoke0/[iks-api-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.1.0.8],iks-clusterid:1[10.1.0.13],iks-registry-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.1.0.7]] : protocol: TCP,UDP
tvpc-spoke1/[iks-node[10.3.1.5],iks-node[10.3.1.6],tvpc-spoke1-z3-worker[10.3.1.4]] => tvpc-spoke0/[iks-api-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.2.0.8],iks-clusterid:1[10.2.0.13],iks-registry-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.2.0.7]] : protocol: TCP,UDP
tvpc-spoke1/[iks-node[10.3.1.5],iks-node[10.3.1.6],tvpc-spoke1-z3-worker[10.3.1.4]] => tvpc-spoke0/[iks-api-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.3.0.8],iks-clusterid:1[10.3.0.12],iks-registry-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.3.0.7]] : protocol: TCP,UDP
tvpc-spoke1/[iks-node[10.3.1.5],iks-node[10.3.1.6],tvpc-spoke1-z3-worker[10.3.1.4]] => tvpc-spoke0/[iks-node[10.1.0.11],iks-node[10.1.0.12],tvpc-spoke0-z1-worker[10.1.0.4]] : All Connections
tvpc-spoke1/[iks-node[10.3.1.5],iks-node[10.3.1.6],tvpc-spoke1-z3-worker[10.3.1.4]] => tvpc-spoke0/[iks-node[10.2.0.11],iks-node[10.2.0.12],tvpc-spoke0-z2-worker[10.2.0.4]] : All Connections
tvpc-spoke1/[iks-node[10.3.1.5],iks-node[10.3.1.6],tvpc-spoke1-z3-worker[10.3.1.4]] => tvpc-spoke0/[iks-node[10.3.0.10],iks-node[10.3.0.11],tvpc-spoke0-z3-worker[10.3.0.4]] : All Connections
tvpc-spoke1/[iks-node[10.3.1.5],iks-node[10.3.1.6],tvpc-spoke1-z3-worker[10.3.1.4]] => tvpc-spoke0/kube-clusterid:1-124eeb9c05a2412c9c141445301ed38b[LoadBalancer] : protocol: TCP * 
tvpc-spoke1/[iks-node[10.3.1.5],iks-node[10.3.1.6],tvpc-spoke1-z3-worker[10.3.1.4]] => tvpc-spoke0/kube-clusterid:1-124eeb9c05a2412c9c141445301ed38b[LoadBalancer] : protocol: UDP
tvpc-spoke1/[iks-node[10.3.1.5],iks-node[10.3.1.6],tvpc-spoke1-z3-worker[10.3.1.4]] => tvpc-spoke0/server-lb[LoadBalancer] : protocol: TCP * 
tvpc-spoke1/[iks-node[10.3.1.5],iks-node[10.3.1.6],tvpc-spoke1-z3-worker[10.3.1.4]] => tvpc-spoke0/server-lb[LoadBalancer] : protocol: UDP
tvpc-spoke1/[iks-node[10.3.1.5],iks-node[10.3.1.6],tvpc-spoke1-z3-worker[10.3.1.4]] => tvpc-transit/tvpc-fw-z1-s3-0[10.1.15.196] : All Connections
tvpc-spoke1/[iks-node[10.3.1.5],iks-node[10.3.1.6],tvpc-spoke1-z3-worker[10.3.1.4]] => tvpc-transit/tvpc-fw-z2-s3-0[10.2.15.196] : All Connections
tvpc-spoke1/[iks-node[10.3.1.5],iks-node[10.3.1.6],tvpc-spoke1-z3-worker[10.3.1.4]] => tvpc-transit/tvpc-fw-z3-s3-0[10.3.15.196] : All Connections
tvpc-spoke1/[iks-node[10.3.1.5],iks-node[10.3.1.6],tvpc-spoke1-z3-worker[10.3.1.4]] => tvpc-transit/tvpc-transit-z1-worker[10.1.15.4] : All Connections
tvpc-spoke1/[iks-node[10.3.1.5],iks-node[10.3.1.6],tvpc-spoke1-z3-worker[10.3.1.4]] => tvpc-transit/tvpc-transit-z2-worker[10.2.15.4] : All Connections
tvpc-spoke1/[iks-node[10.3.1.5],iks-node[10.3.1.6],tvpc-spoke1-z3-worker[10.3.1.4]] => tvpc-transit/tvpc-transit-z3-worker[10.3.15.4] : All Connections
tvpc-transit/tvpc-fw-z1-s3-0[10.1.15.196] => tvpc-spoke0/[iks-api-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.1.0.8],iks-clusterid:1[10.1.0.13],iks-registry-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.1.0.7]] : protocol: TCP,UDP
tvpc-transit/tvpc-fw-z1-s3-0[10.1.15.196] => tvpc-spoke0/[iks-api-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.2.0.8],iks-clusterid:1[10.2.0.13],iks-registry-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.2.0.7]] : protocol: TCP,UDP
tvpc-transit/tvpc-fw-z1-s3-0[10.1.15.196] => tvpc-spoke0/[iks-api-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.3.0.8],iks-clusterid:1[10.3.0.12],iks-registry-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.3.0.7]] : protocol: TCP,UDP
tvpc-transit/tvpc-fw-z1-s3-0[10.1.15.196] => tvpc-spoke0/[iks-node[10.1.0.11],iks-node[10.1.0.12],tvpc-spoke0-z1-worker[10.1.0.4]] : All Connections
tvpc-transit/tvpc-fw-z1-s3-0[10.1.15.196] => tvpc-spoke0/[iks-node[10.2.0.11],iks-node[10.2.0.12],tvpc-spoke0-z2-worker[10.2.0.4]] : All Connections
tvpc-transit/tvpc-fw-z1-s3-0[10.1.15.196] => tvpc-spoke0/[iks-node[10.3.0.10],iks-node[10.3.0.11],tvpc-spoke0-z3-worker[10.3.0.4]] : All Connections
tvpc-transit/tvpc-fw-z1-s3-0[10.1.15.196] => tvpc-spoke0/kube-clusterid:1-124eeb9c05a2412c9c141445301ed38b[LoadBalancer] : protocol: TCP * 
tvpc-transit/tvpc-fw-z1-s3-0[10.1.15.196] => tvpc-spoke0/kube-clusterid:1-124eeb9c05a2412c9c141445301ed38b[LoadBalancer] : protocol: UDP
tvpc-transit/tvpc-fw-z1-s3-0[10.1.15.196] => tvpc-spoke0/server-lb[LoadBalancer] : protocol: TCP * 
tvpc-transit/tvpc-fw-z1-s3-0[10.1.15.196] => tvpc-spoke0/server-lb[LoadBalancer] : protocol: UDP
tvpc-transit/tvpc-fw-z1-s3-0[10.1.15.196] => tvpc-spoke1/[iks-api-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.1.1.8],iks-clusterid:8[10.1.1.9],iks-registry-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.1.1.7]] : protocol: TCP,UDP
tvpc-transit/tvpc-fw-z1-s3-0[10.1.15.196] => tvpc-spoke1/[iks-api-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.2.1.8],iks-clusterid:8[10.2.1.9],iks-registry-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.2.1.7]] : protocol: TCP,UDP
tvpc-transit/tvpc-fw-z1-s3-0[10.1.15.196] => tvpc-spoke1/[iks-api-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.3.1.8],iks-clusterid:8[10.3.1.9],iks-registry-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.3.1.7]] : protocol: TCP,UDP
tvpc-transit/tvpc-fw-z1-s3-0[10.1.15.196] => tvpc-spoke1/[iks-node[10.1.1.5],iks-node[10.1.1.6],tvpc-spoke1-z1-worker[10.1.1.4]] : All Connections
tvpc-transit/tvpc-fw-z1-s3-0[10.1.15.196] => tvpc-spoke1/[iks-node[10.2.1.5],iks-node[10.2.1.6],tvpc-spoke1-z2-worker[10.2.1.4]] : All Connections
tvpc-transit/tvpc-fw-z1-s3-0[10.1.15.196] => tvpc-spoke1/[iks-node[10.3.1.5],iks-node[10.3.1.6],tvpc-spoke1-z3-worker[10.3.1.4]] : All Connections
tvpc-transit/tvpc-fw-z1-s3-0[10.1.15.196] => tvpc-spoke1/kube-clusterid:8-c67f13d52fff45d7bdca157530557243[LoadBalancer] : protocol: TCP * 
tvpc-transit/tvpc-fw-z1-s3-0[10.1.15.196] => tvpc-spoke1/kube-clusterid:8-c67f13d52fff45d7bdca157530557243[LoadBalancer] : protocol: UDP
tvpc-transit/tvpc-fw-z1-s3-0[10.1.15.196] => tvpc-spoke1/server1-lb[LoadBalancer] : protocol: TCP * 
tvpc-transit/tvpc-fw-z1-s3-0[10.1.15.196] => tvpc-spoke1/server1-lb[LoadBalancer] : protocol: UDP
tvpc-transit/tvpc-fw-z2-s3-0[10.2.15.196] => tvpc-spoke0/[iks-api-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.1.0.8],iks-clusterid:1[10.1.0.13],iks-registry-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.1.0.7]] : protocol: TCP,UDP
tvpc-transit/tvpc-fw-z2-s3-0[10.2.15.196] => tvpc-spoke0/[iks-api-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.2.0.8],iks-clusterid:1[10.2.0.13],iks-registry-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.2.0.7]] : protocol: TCP,UDP
tvpc-transit/tvpc-fw-z2-s3-0[10.2.15.196] => tvpc-spoke0/[iks-api-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.3.0.8],iks-clusterid:1[10.3.0.12],iks-registry-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.3.0.7]] : protocol: TCP,UDP
tvpc-transit/tvpc-fw-z2-s3-0[10.2.15.196] => tvpc-spoke0/[iks-node[10.1.0.11],iks-node[10.1.0.12],tvpc-spoke0-z1-worker[10.1.0.4]] : All Connections
tvpc-transit/tvpc-fw-z2-s3-0[10.2.15.196] => tvpc-spoke0/[iks-node[10.2.0.11],iks-node[10.2.0.12],tvpc-spoke0-z2-worker[10.2.0.4]] : All Connections
tvpc-transit/tvpc-fw-z2-s3-0[10.2.15.196] => tvpc-spoke0/[iks-node[10.3.0.10],iks-node[10.3.0.11],tvpc-spoke0-z3-worker[10.3.0.4]] : All Connections
tvpc-transit/tvpc-fw-z2-s3-0[10.2.15.196] => tvpc-spoke0/kube-clusterid:1-124eeb9c05a2412c9c141445301ed38b[LoadBalancer] : protocol: TCP * 
tvpc-transit/tvpc-fw-z2-s3-0[10.2.15.196] => tvpc-spoke0/kube-clusterid:1-124eeb9c05a2412c9c141445301ed38b[LoadBalancer] : protocol: UDP
tvpc-transit/tvpc-fw-z2-s3-0[10.2.15.196] => tvpc-spoke0/server-lb[LoadBalancer] : protocol: TCP * 
tvpc-transit/tvpc-fw-z2-s3-0[10.2.15.196] => tvpc-spoke0/server-lb[LoadBalancer] : protocol: UDP
tvpc-transit/tvpc-fw-z2-s3-0[10.2.15.196] => tvpc-spoke1/[iks-api-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.1.1.8],iks-clusterid:8[10.1.1.9],iks-registry-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.1.1.7]] : protocol: TCP,UDP
tvpc-transit/tvpc-fw-z2-s3-0[10.2.15.196] => tvpc-spoke1/[iks-api-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.2.1.8],iks-clusterid:8[10.2.1.9],iks-registry-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.2.1.7]] : protocol: TCP,UDP
tvpc-transit/tvpc-fw-z2-s3-0[10.2.15.196] => tvpc-spoke1/[iks-api-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.3.1.8],iks-clusterid:8[10.3.1.9],iks-registry-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.3.1.7]] : protocol: TCP,UDP
tvpc-transit/tvpc-fw-z2-s3-0[10.2.15.196] => tvpc-spoke1/[iks-node[10.1.1.5],iks-node[10.1.1.6],tvpc-spoke1-z1-worker[10.1.1.4]] : All Connections
tvpc-transit/tvpc-fw-z2-s3-0[10.2.15.196] => tvpc-spoke1/[iks-node[10.2.1.5],iks-node[10.2.1.6],tvpc-spoke1-z2-worker[10.2.1.4]] : All Connections
tvpc-transit/tvpc-fw-z2-s3-0[10.2.15.196] => tvpc-spoke1/[iks-node[10.3.1.5],iks-node[10.3.1.6],tvpc-spoke1-z3-worker[10.3.1.4]] : All Connections
tvpc-transit/tvpc-fw-z2-s3-0[10.2.15.196] => tvpc-spoke1/kube-clusterid:8-c67f13d52fff45d7bdca157530557243[LoadBalancer] : protocol: TCP * 
tvpc-transit/tvpc-fw-z2-s3-0[10.2.15.196] => tvpc-spoke1/kube-clusterid:8-c67f13d52fff45d7bdca157530557243[LoadBalancer] : protocol: UDP
tvpc-transit/tvpc-fw-z2-s3-0[10.2.15.196] => tvpc-spoke1/server1-lb[LoadBalancer] : protocol: TCP * 
tvpc-transit/tvpc-fw-z2-s3-0[10.2.15.196] => tvpc-spoke1/server1-lb[LoadBalancer] : protocol: UDP
tvpc-transit/tvpc-fw-z3-s3-0[10.3.15.196] => tvpc-spoke0/[iks-api-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.1.0.8],iks-clusterid:1[10.1.0.13],iks-registry-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.1.0.7]] : protocol: TCP,UDP
tvpc-transit/tvpc-fw-z3-s3-0[10.3.15.196] => tvpc-spoke0/[iks-api-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.2.0.8],iks-clusterid:1[10.2.0.13],iks-registry-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.2.0.7]] : protocol: TCP,UDP
tvpc-transit/tvpc-fw-z3-s3-0[10.3.15.196] => tvpc-spoke0/[iks-api-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.3.0.8],iks-clusterid:1[10.3.0.12],iks-registry-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.3.0.7]] : protocol: TCP,UDP
tvpc-transit/tvpc-fw-z3-s3-0[10.3.15.196] => tvpc-spoke0/[iks-node[10.1.0.11],iks-node[10.1.0.12],tvpc-spoke0-z1-worker[10.1.0.4]] : All Connections
tvpc-transit/tvpc-fw-z3-s3-0[10.3.15.196] => tvpc-spoke0/[iks-node[10.2.0.11],iks-node[10.2.0.12],tvpc-spoke0-z2-worker[10.2.0.4]] : All Connections
tvpc-transit/tvpc-fw-z3-s3-0[10.3.15.196] => tvpc-spoke0/[iks-node[10.3.0.10],iks-node[10.3.0.11],tvpc-spoke0-z3-worker[10.3.0.4]] : All Connections
tvpc-transit/tvpc-fw-z3-s3-0[10.3.15.196] => tvpc-spoke0/kube-clusterid:1-124eeb9c05a2412c9c141445301ed38b[LoadBalancer] : protocol: TCP * 
tvpc-transit/tvpc-fw-z3-s3-0[10.3.15.196] => tvpc-spoke0/kube-clusterid:1-124eeb9c05a2412c9c141445301ed38b[LoadBalancer] : protocol: UDP
tvpc-transit/tvpc-fw-z3-s3-0[10.3.15.196] => tvpc-spoke0/server-lb[LoadBalancer] : protocol: TCP * 
tvpc-transit/tvpc-fw-z3-s3-0[10.3.15.196] => tvpc-spoke0/server-lb[LoadBalancer] : protocol: UDP
tvpc-transit/tvpc-fw-z3-s3-0[10.3.15.196] => tvpc-spoke1/[iks-api-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.1.1.8],iks-clusterid:8[10.1.1.9],iks-registry-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.1.1.7]] : protocol: TCP,UDP
tvpc-transit/tvpc-fw-z3-s3-0[10.3.15.196] => tvpc-spoke1/[iks-api-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.2.1.8],iks-clusterid:8[10.2.1.9],iks-registry-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.2.1.7]] : protocol: TCP,UDP
tvpc-transit/tvpc-fw-z3-s3-0[10.3.15.196] => tvpc-spoke1/[iks-api-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.3.1.8],iks-clusterid:8[10.3.1.9],iks-registry-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.3.1.7]] : protocol: TCP,UDP
tvpc-transit/tvpc-fw-z3-s3-0[10.3.15.196] => tvpc-spoke1/[iks-node[10.1.1.5],iks-node[10.1.1.6],tvpc-spoke1-z1-worker[10.1.1.4]] : All Connections
tvpc-transit/tvpc-fw-z3-s3-0[10.3.15.196] => tvpc-spoke1/[iks-node[10.2.1.5],iks-node[10.2.1.6],tvpc-spoke1-z2-worker[10.2.1.4]] : All Connections
tvpc-transit/tvpc-fw-z3-s3-0[10.3.15.196] => tvpc-spoke1/[iks-node[10.3.1.5],iks-node[10.3.1.6],tvpc-spoke1-z3-worker[10.3.1.4]] : All Connections
tvpc-transit/tvpc-fw-z3-s3-0[10.3.15.196] => tvpc-spoke1/kube-clusterid:8-c67f13d52fff45d7bdca157530557243[LoadBalancer] : protocol: TCP * 
tvpc-transit/tvpc-fw-z3-s3-0[10.3.15.196] => tvpc-spoke1/kube-clusterid:8-c67f13d52fff45d7bdca157530557243[LoadBalancer] : protocol: UDP
tvpc-transit/tvpc-fw-z3-s3-0[10.3.15.196] => tvpc-spoke1/server1-lb[LoadBalancer] : protocol: TCP * 
tvpc-transit/tvpc-fw-z3-s3-0[10.3.15.196] => tvpc-spoke1/server1-lb[LoadBalancer] : protocol: UDP
tvpc-transit/tvpc-transit-z1-worker[10.1.15.4] => tvpc-spoke0/[iks-api-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.1.0.8],iks-clusterid:1[10.1.0.13],iks-registry-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.1.0.7]] : protocol: TCP,UDP
tvpc-transit/tvpc-transit-z1-worker[10.1.15.4] => tvpc-spoke0/[iks-api-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.2.0.8],iks-clusterid:1[10.2.0.13],iks-registry-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.2.0.7]] : protocol: TCP,UDP
tvpc-transit/tvpc-transit-z1-worker[10.1.15.4] => tvpc-spoke0/[iks-api-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.3.0.8],iks-clusterid:1[10.3.0.12],iks-registry-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.3.0.7]] : protocol: TCP,UDP
tvpc-transit/tvpc-transit-z1-worker[10.1.15.4] => tvpc-spoke0/[iks-node[10.1.0.11],iks-node[10.1.0.12],tvpc-spoke0-z1-worker[10.1.0.4]] : All Connections
tvpc-transit/tvpc-transit-z1-worker[10.1.15.4] => tvpc-spoke0/[iks-node[10.2.0.11],iks-node[10.2.0.12],tvpc-spoke0-z2-worker[10.2.0.4]] : All Connections
tvpc-transit/tvpc-transit-z1-worker[10.1.15.4] => tvpc-spoke0/[iks-node[10.3.0.10],iks-node[10.3.0.11],tvpc-spoke0-z3-worker[10.3.0.4]] : All Connections
tvpc-transit/tvpc-transit-z1-worker[10.1.15.4] => tvpc-spoke0/kube-clusterid:1-124eeb9c05a2412c9c141445301ed38b[LoadBalancer] : protocol: TCP * 
tvpc-transit/tvpc-transit-z1-worker[10.1.15.4] => tvpc-spoke0/kube-clusterid:1-124eeb9c05a2412c9c141445301ed38b[LoadBalancer] : protocol: UDP
tvpc-transit/tvpc-transit-z1-worker[10.1.15.4] => tvpc-spoke0/server-lb[LoadBalancer] : protocol: TCP * 
tvpc-transit/tvpc-transit-z1-worker[10.1.15.4] => tvpc-spoke0/server-lb[LoadBalancer] : protocol: UDP
tvpc-transit/tvpc-transit-z1-worker[10.1.15.4] => tvpc-spoke1/[iks-api-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.1.1.8],iks-clusterid:8[10.1.1.9],iks-registry-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.1.1.7]] : protocol: TCP,UDP
tvpc-transit/tvpc-transit-z1-worker[10.1.15.4] => tvpc-spoke1/[iks-api-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.2.1.8],iks-clusterid:8[10.2.1.9],iks-registry-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.2.1.7]] : protocol: TCP,UDP
tvpc-transit/tvpc-transit-z1-worker[10.1.15.4] => tvpc-spoke1/[iks-api-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.3.1.8],iks-clusterid:8[10.3.1.9],iks-registry-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.3.1.7]] : protocol: TCP,UDP
tvpc-transit/tvpc-transit-z1-worker[10.1.15.4] => tvpc-spoke1/[iks-node[10.1.1.5],iks-node[10.1.1.6],tvpc-spoke1-z1-worker[10.1.1.4]] : All Connections
tvpc-transit/tvpc-transit-z1-worker[10.1.15.4] => tvpc-spoke1/[iks-node[10.2.1.5],iks-node[10.2.1.6],tvpc-spoke1-z2-worker[10.2.1.4]] : All Connections
tvpc-transit/tvpc-transit-z1-worker[10.1.15.4] => tvpc-spoke1/[iks-node[10.3.1.5],iks-node[10.3.1.6],tvpc-spoke1-z3-worker[10.3.1.4]] : All Connections
tvpc-transit/tvpc-transit-z1-worker[10.1.15.4] => tvpc-spoke1/kube-clusterid:8-c67f13d52fff45d7bdca157530557243[LoadBalancer] : protocol: TCP * 
tvpc-transit/tvpc-transit-z1-worker[10.1.15.4] => tvpc-spoke1/kube-clusterid:8-c67f13d52fff45d7bdca157530557243[LoadBalancer] : protocol: UDP
tvpc-transit/tvpc-transit-z1-worker[10.1.15.4] => tvpc-spoke1/server1-lb[LoadBalancer] : protocol: TCP * 
tvpc-transit/tvpc-transit-z1-worker[10.1.15.4] => tvpc-spoke1/server1-lb[LoadBalancer] : protocol: UDP
tvpc-transit/tvpc-transit-z2-worker[10.2.15.4] => tvpc-spoke0/[iks-api-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.1.0.8],iks-clusterid:1[10.1.0.13],iks-registry-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.1.0.7]] : protocol: TCP,UDP
tvpc-transit/tvpc-transit-z2-worker[10.2.15.4] => tvpc-spoke0/[iks-api-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.2.0.8],iks-clusterid:1[10.2.0.13],iks-registry-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.2.0.7]] : protocol: TCP,UDP
tvpc-transit/tvpc-transit-z2-worker[10.2.15.4] => tvpc-spoke0/[iks-api-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.3.0.8],iks-clusterid:1[10.3.0.12],iks-registry-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.3.0.7]] : protocol: TCP,UDP
tvpc-transit/tvpc-transit-z2-worker[10.2.15.4] => tvpc-spoke0/[iks-node[10.1.0.11],iks-node[10.1.0.12],tvpc-spoke0-z1-worker[10.1.0.4]] : All Connections
tvpc-transit/tvpc-transit-z2-worker[10.2.15.4] => tvpc-spoke0/[iks-node[10.2.0.11],iks-node[10.2.0.12],tvpc-spoke0-z2-worker[10.2.0.4]] : All Connections
tvpc-transit/tvpc-transit-z2-worker[10.2.15.4] => tvpc-spoke0/[iks-node[10.3.0.10],iks-node[10.3.0.11],tvpc-spoke0-z3-worker[10.3.0.4]] : All Connections
tvpc-transit/tvpc-transit-z2-worker[10.2.15.4] => tvpc-spoke0/kube-clusterid:1-124eeb9c05a2412c9c141445301ed38b[LoadBalancer] : protocol: TCP * 
tvpc-transit/tvpc-transit-z2-worker[10.2.15.4] => tvpc-spoke0/kube-clusterid:1-124eeb9c05a2412c9c141445301ed38b[LoadBalancer] : protocol: UDP
tvpc-transit/tvpc-transit-z2-worker[10.2.15.4] => tvpc-spoke0/server-lb[LoadBalancer] : protocol: TCP * 
tvpc-transit/tvpc-transit-z2-worker[10.2.15.4] => tvpc-spoke0/server-lb[LoadBalancer] : protocol: UDP
tvpc-transit/tvpc-transit-z2-worker[10.2.15.4] => tvpc-spoke1/[iks-api-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.1.1.8],iks-clusterid:8[10.1.1.9],iks-registry-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.1.1.7]] : protocol: TCP,UDP
tvpc-transit/tvpc-transit-z2-worker[10.2.15.4] => tvpc-spoke1/[iks-api-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.2.1.8],iks-clusterid:8[10.2.1.9],iks-registry-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.2.1.7]] : protocol: TCP,UDP
tvpc-transit/tvpc-transit-z2-worker[10.2.15.4] => tvpc-spoke1/[iks-api-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.3.1.8],iks-clusterid:8[10.3.1.9],iks-registry-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.3.1.7]] : protocol: TCP,UDP
tvpc-transit/tvpc-transit-z2-worker[10.2.15.4] => tvpc-spoke1/[iks-node[10.1.1.5],iks-node[10.1.1.6],tvpc-spoke1-z1-worker[10.1.1.4]] : All Connections
tvpc-transit/tvpc-transit-z2-worker[10.2.15.4] => tvpc-spoke1/[iks-node[10.2.1.5],iks-node[10.2.1.6],tvpc-spoke1-z2-worker[10.2.1.4]] : All Connections
tvpc-transit/tvpc-transit-z2-worker[10.2.15.4] => tvpc-spoke1/[iks-node[10.3.1.5],iks-node[10.3.1.6],tvpc-spoke1-z3-worker[10.3.1.4]] : All Connections
tvpc-transit/tvpc-transit-z2-worker[10.2.15.4] => tvpc-spoke1/kube-clusterid:8-c67f13d52fff45d7bdca157530557243[LoadBalancer] : protocol: TCP * 
tvpc-transit/tvpc-transit-z2-worker[10.2.15.4] => tvpc-spoke1/kube-clusterid:8-c67f13d52fff45d7bdca157530557243[LoadBalancer] : protocol: UDP
tvpc-transit/tvpc-transit-z2-worker[10.2.15.4] => tvpc-spoke1/server1-lb[LoadBalancer] : protocol: TCP * 
tvpc-transit/tvpc-transit-z2-worker[10.2.15.4] => tvpc-spoke1/server1-lb[LoadBalancer] : protocol: UDP
tvpc-transit/tvpc-transit-z3-worker[10.3.15.4] => tvpc-spoke0/[iks-api-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.1.0.8],iks-clusterid:1[10.1.0.13],iks-registry-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.1.0.7]] : protocol: TCP,UDP
tvpc-transit/tvpc-transit-z3-worker[10.3.15.4] => tvpc-spoke0/[iks-api-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.2.0.8],iks-clusterid:1[10.2.0.13],iks-registry-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.2.0.7]] : protocol: TCP,UDP
tvpc-transit/tvpc-transit-z3-worker[10.3.15.4] => tvpc-spoke0/[iks-api-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.3.0.8],iks-clusterid:1[10.3.0.12],iks-registry-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.3.0.7]] : protocol: TCP,UDP
tvpc-transit/tvpc-transit-z3-worker[10.3.15.4] => tvpc-spoke0/[iks-node[10.1.0.11],iks-node[10.1.0.12],tvpc-spoke0-z1-worker[10.1.0.4]] : All Connections
tvpc-transit/tvpc-transit-z3-worker[10.3.15.4] => tvpc-spoke0/[iks-node[10.2.0.11],iks-node[10.2.0.12],tvpc-spoke0-z2-worker[10.2.0.4]] : All Connections
tvpc-transit/tvpc-transit-z3-worker[10.3.15.4] => tvpc-spoke0/[iks-node[10.3.0.10],iks-node[10.3.0.11],tvpc-spoke0-z3-worker[10.3.0.4]] : All Connections
tvpc-transit/tvpc-transit-z3-worker[10.3.15.4] => tvpc-spoke0/kube-clusterid:1-124eeb9c05a2412c9c141445301ed38b[LoadBalancer] : protocol: TCP * 
tvpc-transit/tvpc-transit-z3-worker[10.3.15.4] => tvpc-spoke0/kube-clusterid:1-124eeb9c05a2412c9c141445301ed38b[LoadBalancer] : protocol: UDP
tvpc-transit/tvpc-transit-z3-worker[10.3.15.4] => tvpc-spoke0/server-lb[LoadBalancer] : protocol: TCP * 
tvpc-transit/tvpc-transit-z3-worker[10.3.15.4] => tvpc-spoke0/server-lb[LoadBalancer] : protocol: UDP
tvpc-transit/tvpc-transit-z3-worker[10.3.15.4] => tvpc-spoke1/[iks-api-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.1.1.8],iks-clusterid:8[10.1.1.9],iks-registry-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.1.1.7]] : protocol: TCP,UDP
tvpc-transit/tvpc-transit-z3-worker[10.3.15.4] => tvpc-spoke1/[iks-api-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.2.1.8],iks-clusterid:8[10.2.1.9],iks-registry-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.2.1.7]] : protocol: TCP,UDP
tvpc-transit/tvpc-transit-z3-worker[10.3.15.4] => tvpc-spoke1/[iks-api-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.3.1.8],iks-clusterid:8[10.3.1.9],iks-registry-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.3.1.7]] : protocol: TCP,UDP
tvpc-transit/tvpc-transit-z3-worker[10.3.15.4] => tvpc-spoke1/[iks-node[10.1.1.5],iks-node[10.1.1.6],tvpc-spoke1-z1-worker[10.1.1.4]] : All Connections
tvpc-transit/tvpc-transit-z3-worker[10.3.15.4] => tvpc-spoke1/[iks-node[10.2.1.5],iks-node[10.2.1.6],tvpc-spoke1-z2-worker[10.2.1.4]] : All Connections
tvpc-transit/tvpc-transit-z3-worker[10.3.15.4] => tvpc-spoke1/[iks-node[10.3.1.5],iks-node[10.3.1.6],tvpc-spoke1-z3-worker[10.3.1.4]] : All Connections
tvpc-transit/tvpc-transit-z3-worker[10.3.15.4] => tvpc-spoke1/kube-clusterid:8-c67f13d52fff45d7bdca157530557243[LoadBalancer] : protocol: TCP * 
tvpc-transit/tvpc-transit-z3-worker[10.3.15.4] => tvpc-spoke1/kube-clusterid:8-c67f13d52fff45d7bdca157530557243[LoadBalancer] : protocol: UDP
tvpc-transit/tvpc-transit-z3-worker[10.3.15.4] => tvpc-spoke1/server1-lb[LoadBalancer] : protocol: TCP * 
tvpc-transit/tvpc-transit-z3-worker[10.3.15.4] => tvpc-spoke1/server1-lb[LoadBalancer] : protocol: UDP

Connectivity between VPCs connected by TGW tvpc-tgw-link (UID: crn:1316)
tvpc-enterprise/tvpc-enterprise-z1-worker[192.168.0.4] => tvpc-transit/tvpc-fw-z1-s3-0[10.1.15.196] : All Connections
tvpc-enterprise/tvpc-enterprise-z1-worker[192.168.0.4] => tvpc-transit/tvpc-fw-z2-s3-0[10.2.15.196] : All Connections
tvpc-enterprise/tvpc-enterprise-z1-worker[192.168.0.4] => tvpc-transit/tvpc-fw-z3-s3-0[10.3.15.196] : All Connections
tvpc-enterprise/tvpc-enterprise-z1-worker[192.168.0.4] => tvpc-transit/tvpc-transit-z1-worker[10.1.15.4] : All Connections
tvpc-enterprise/tvpc-enterprise-z1-worker[192.168.0.4] => tvpc-transit/tvpc-transit-z2-worker[10.2.15.4] : All Connections
tvpc-enterprise/tvpc-enterprise-z1-worker[192.168.0.4] => tvpc-transit/tvpc-transit-z3-worker[10.3.15.4] : All Connections
tvpc-enterprise/tvpc-enterprise-z2-worker[192.168.1.4] => tvpc-transit/tvpc-fw-z1-s3-0[10.1.15.196] : All Connections
tvpc-enterprise/tvpc-enterprise-z2-worker[192.168.1.4] => tvpc-transit/tvpc-fw-z2-s3-0[10.2.15.196] : All Connections
tvpc-enterprise/tvpc-enterprise-z2-worker[192.168.1.4] => tvpc-transit/tvpc-fw-z3-s3-0[10.3.15.196] : All Connections
tvpc-enterprise/tvpc-enterprise-z2-worker[192.168.1.4] => tvpc-transit/tvpc-transit-z1-worker[10.1.15.4] : All Connections
tvpc-enterprise/tvpc-enterprise-z2-worker[192.168.1.4] => tvpc-transit/tvpc-transit-z2-worker[10.2.15.4] : All Connections
tvpc-enterprise/tvpc-enterprise-z2-worker[192.168.1.4] => tvpc-transit/tvpc-transit-z3-worker[10.3.15.4] : All Connections
tvpc-enterprise/tvpc-enterprise-z3-worker[192.168.2.4] => tvpc-transit/tvpc-fw-z1-s3-0[10.1.15.196] : All Connections
tvpc-enterprise/tvpc-enterprise-z3-worker[192.168.2.4] => tvpc-transit/tvpc-fw-z2-s3-0[10.2.15.196] : All Connections
tvpc-enterprise/tvpc-enterprise-z3-worker[192.168.2.4] => tvpc-transit/tvpc-fw-z3-s3-0[10.3.15.196] : All Connections
tvpc-enterprise/tvpc-enterprise-z3-worker[192.168.2.4] => tvpc-transit/tvpc-transit-z1-worker[10.1.15.4] : All Connections
tvpc-enterprise/tvpc-enterprise-z3-worker[192.168.2.4] => tvpc-transit/tvpc-transit-z2-worker[10.2.15.4] : All Connections
tvpc-enterprise/tvpc-enterprise-z3-worker[192.168.2.4] => tvpc-transit/tvpc-transit-z3-worker[10.3.15.4] : All Connections
tvpc-transit/tvpc-fw-z1-s3-0[10.1.15.196] => tvpc-enterprise/tvpc-enterprise-z1-worker[192.168.0.4] : All Connections
tvpc-transit/tvpc-fw-z1-s3-0[10.1.15.196] => tvpc-enterprise/tvpc-enterprise-z2-worker[192.168.1.4] : All Connections
tvpc-transit/tvpc-fw-z1-s3-0[10.1.15.196] => tvpc-enterprise/tvpc-enterprise-z3-worker[192.168.2.4] : All Connections
tvpc-transit/tvpc-fw-z2-s3-0[10.2.15.196] => tvpc-enterprise/tvpc-enterprise-z1-worker[192.168.0.4] : All Connections
tvpc-transit/tvpc-fw-z2-s3-0[10.2.15.196] => tvpc-enterprise/tvpc-enterprise-z2-worker[192.168.1.4] : All Connections
tvpc-transit/tvpc-fw-z2-s3-0[10.2.15.196] => tvpc-enterprise/tvpc-enterprise-z3-worker[192.168.2.4] : All Connections
tvpc-transit/tvpc-fw-z3-s3-0[10.3.15.196] => tvpc-enterprise/tvpc-enterprise-z1-worker[192.168.0.4] : All Connections
tvpc-transit/tvpc-fw-z3-s3-0[10.3.15.196] => tvpc-enterprise/tvpc-enterprise-z2-worker[192.168.1.4] : All Connections
tvpc-transit/tvpc-fw-z3-s3-0[10.3.15.196] => tvpc-enterprise/tvpc-enterprise-z3-worker[192.168.2.4] : All Connections
tvpc-transit/tvpc-transit-z1-worker[10.1.15.4] => tvpc-enterprise/tvpc-enterprise-z1-worker[192.168.0.4] : All Connections
tvpc-transit/tvpc-transit-z1-worker[10.1.15.4] => tvpc-enterprise/tvpc-enterprise-z2-worker[192.168.1.4] : All Connections
tvpc-transit/tvpc-transit-z1-worker[10.1.15.4] => tvpc-enterprise/tvpc-enterprise-z3-worker[192.168.2.4] : All Connections
tvpc-transit/tvpc-transit-z2-worker[10.2.15.4] => tvpc-enterprise/tvpc-enterprise-z1-worker[192.168.0.4] : All Connections
tvpc-transit/tvpc-transit-z2-worker[10.2.15.4] => tvpc-enterprise/tvpc-enterprise-z2-worker[192.168.1.4] : All Connections
tvpc-transit/tvpc-transit-z2-worker[10.2.15.4] => tvpc-enterprise/tvpc-enterprise-z3-worker[192.168.2.4] : All Connections
tvpc-transit/tvpc-transit-z3-worker[10.3.15.4] => tvpc-enterprise/tvpc-enterprise-z1-worker[192.168.0.4] : All Connections
tvpc-transit/tvpc-transit-z3-worker[10.3.15.4] => tvpc-enterprise/tvpc-enterprise-z2-worker[192.168.1.4] : All Connections
tvpc-transit/tvpc-transit-z3-worker[10.3.15.4] => tvpc-enterprise/tvpc-enterprise-z3-worker[192.168.2.4] : All Connections

Endpoint connectivity for VPC tvpc-enterprise
Public Internet 147.235.211.134/32 => tvpc-enterprise-z1-worker[192.168.0.4] : protocol: TCP dst-ports: 22
Public Internet 147.235.211.134/32 => tvpc-enterprise-z2-worker[192.168.1.4] : protocol: TCP dst-ports: 22
Public Internet 147.235.211.134/32 => tvpc-enterprise-z3-worker[192.168.2.4] : protocol: TCP dst-ports: 22
tvpc-enterprise-z1-worker[192.168.0.4] => Public Internet (all ranges) : All Connections
tvpc-enterprise-z1-worker[192.168.0.4] => tvpc-enterprise-z2-worker[192.168.1.4] : All Connections
tvpc-enterprise-z1-worker[192.168.0.4] => tvpc-enterprise-z3-worker[192.168.2.4] : All Connections
tvpc-enterprise-z2-worker[192.168.1.4] => Public Internet (all ranges) : All Connections
tvpc-enterprise-z2-worker[192.168.1.4] => tvpc-enterprise-z1-worker[192.168.0.4] : All Connections
tvpc-enterprise-z2-worker[192.168.1.4] => tvpc-enterprise-z3-worker[192.168.2.4] : All Connections
tvpc-enterprise-z3-worker[192.168.2.4] => Public Internet (all ranges) : All Connections
tvpc-enterprise-z3-worker[192.168.2.4] => tvpc-enterprise-z1-worker[192.168.0.4] : All Connections
tvpc-enterprise-z3-worker[192.168.2.4] => tvpc-enterprise-z2-worker[192.168.1.4] : All Connections

Endpoint connectivity for VPC tvpc-spoke0
Public Internet (all ranges) => kube-clusterid:1-124eeb9c05a2412c9c141445301ed38b[LoadBalancer] : protocol: TCP,UDP
Public Internet 147.235.211.134/32 => tvpc-spoke0-z1-worker[10.1.0.4] : protocol: TCP dst-ports: 22
Public Internet 147.235.211.134/32 => tvpc-spoke0-z2-worker[10.2.0.4] : protocol: TCP dst-ports: 22
Public Internet 147.235.211.134/32 => tvpc-spoke0-z3-worker[10.3.0.4] : protocol: TCP dst-ports: 22
iks-api-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.1.0.8],iks-clusterid:1[10.1.0.13],iks-registry-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.1.0.7] => iks-api-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.1.0.8],iks-clusterid:1[10.1.0.13],iks-node[10.1.0.11],iks-node[10.1.0.12],iks-registry-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.1.0.7],tvpc-spoke0-z1-worker[10.1.0.4] : protocol: TCP,UDP dst-ports: 30000-32767
iks-api-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.1.0.8],iks-clusterid:1[10.1.0.13],iks-registry-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.1.0.7] => iks-api-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.2.0.8],iks-clusterid:1[10.2.0.13],iks-node[10.2.0.11],iks-node[10.2.0.12],iks-registry-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.2.0.7],tvpc-spoke0-z2-worker[10.2.0.4] : protocol: TCP,UDP dst-ports: 30000-32767
iks-api-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.1.0.8],iks-clusterid:1[10.1.0.13],iks-registry-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.1.0.7] => iks-api-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.3.0.8],iks-clusterid:1[10.3.0.12],iks-node[10.3.0.10],iks-node[10.3.0.11],iks-registry-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.3.0.7],tvpc-spoke0-z3-worker[10.3.0.4] : protocol: TCP,UDP dst-ports: 30000-32767
iks-api-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.1.0.8],iks-clusterid:1[10.1.0.13],iks-registry-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.1.0.7] => kube-clusterid:1-124eeb9c05a2412c9c141445301ed38b[LoadBalancer] : protocol: TCP dst-ports: 30000-32767 * 
iks-api-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.1.0.8],iks-clusterid:1[10.1.0.13],iks-registry-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.1.0.7] => kube-clusterid:1-124eeb9c05a2412c9c141445301ed38b[LoadBalancer] : protocol: UDP dst-ports: 30000-32767
iks-api-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.1.0.8],iks-clusterid:1[10.1.0.13],iks-registry-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.1.0.7] => server-lb[LoadBalancer] : protocol: TCP dst-ports: 30000-32767 * 
iks-api-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.1.0.8],iks-clusterid:1[10.1.0.13],iks-registry-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.1.0.7] => server-lb[LoadBalancer] : protocol: UDP dst-ports: 30000-32767
iks-api-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.2.0.8],iks-clusterid:1[10.2.0.13],iks-registry-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.2.0.7] => iks-api-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.1.0.8],iks-clusterid:1[10.1.0.13],iks-node[10.1.0.11],iks-node[10.1.0.12],iks-registry-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.1.0.7],tvpc-spoke0-z1-worker[10.1.0.4] : protocol: TCP,UDP dst-ports: 30000-32767
iks-api-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.2.0.8],iks-clusterid:1[10.2.0.13],iks-registry-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.2.0.7] => iks-api-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.2.0.8],iks-clusterid:1[10.2.0.13],iks-node[10.2.0.11],iks-node[10.2.0.12],iks-registry-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.2.0.7],tvpc-spoke0-z2-worker[10.2.0.4] : protocol: TCP,UDP dst-ports: 30000-32767
iks-api-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.2.0.8],iks-clusterid:1[10.2.0.13],iks-registry-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.2.0.7] => iks-api-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.3.0.8],iks-clusterid:1[10.3.0.12],iks-node[10.3.0.10],iks-node[10.3.0.11],iks-registry-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.3.0.7],tvpc-spoke0-z3-worker[10.3.0.4] : protocol: TCP,UDP dst-ports: 30000-32767
iks-api-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.2.0.8],iks-clusterid:1[10.2.0.13],iks-registry-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.2.0.7] => kube-clusterid:1-124eeb9c05a2412c9c141445301ed38b[LoadBalancer] : protocol: TCP dst-ports: 30000-32767 * 
iks-api-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.2.0.8],iks-clusterid:1[10.2.0.13],iks-registry-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.2.0.7] => kube-clusterid:1-124eeb9c05a2412c9c141445301ed38b[LoadBalancer] : protocol: UDP dst-ports: 30000-32767
iks-api-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.2.0.8],iks-clusterid:1[10.2.0.13],iks-registry-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.2.0.7] => server-lb[LoadBalancer] : protocol: TCP dst-ports: 30000-32767 * 
iks-api-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.2.0.8],iks-clusterid:1[10.2.0.13],iks-registry-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.2.0.7] => server-lb[LoadBalancer] : protocol: UDP dst-ports: 30000-32767
iks-api-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.3.0.8],iks-clusterid:1[10.3.0.12],iks-registry-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.3.0.7] => iks-api-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.1.0.8],iks-clusterid:1[10.1.0.13],iks-node[10.1.0.11],iks-node[10.1.0.12],iks-registry-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.1.0.7],tvpc-spoke0-z1-worker[10.1.0.4] : protocol: TCP,UDP dst-ports: 30000-32767
iks-api-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.3.0.8],iks-clusterid:1[10.3.0.12],iks-registry-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.3.0.7] => iks-api-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.2.0.8],iks-clusterid:1[10.2.0.13],iks-node[10.2.0.11],iks-node[10.2.0.12],iks-registry-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.2.0.7],tvpc-spoke0-z2-worker[10.2.0.4] : protocol: TCP,UDP dst-ports: 30000-32767
iks-api-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.3.0.8],iks-clusterid:1[10.3.0.12],iks-registry-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.3.0.7] => iks-api-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.3.0.8],iks-clusterid:1[10.3.0.12],iks-node[10.3.0.10],iks-node[10.3.0.11],iks-registry-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.3.0.7],tvpc-spoke0-z3-worker[10.3.0.4] : protocol: TCP,UDP dst-ports: 30000-32767
iks-api-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.3.0.8],iks-clusterid:1[10.3.0.12],iks-registry-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.3.0.7] => kube-clusterid:1-124eeb9c05a2412c9c141445301ed38b[LoadBalancer] : protocol: TCP dst-ports: 30000-32767 * 
iks-api-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.3.0.8],iks-clusterid:1[10.3.0.12],iks-registry-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.3.0.7] => kube-clusterid:1-124eeb9c05a2412c9c141445301ed38b[LoadBalancer] : protocol: UDP dst-ports: 30000-32767
iks-api-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.3.0.8],iks-clusterid:1[10.3.0.12],iks-registry-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.3.0.7] => server-lb[LoadBalancer] : protocol: TCP dst-ports: 30000-32767 * 
iks-api-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.3.0.8],iks-clusterid:1[10.3.0.12],iks-registry-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.3.0.7] => server-lb[LoadBalancer] : protocol: UDP dst-ports: 30000-32767
iks-node[10.1.0.11],iks-node[10.1.0.12] => kube-clusterid:1-124eeb9c05a2412c9c141445301ed38b[LoadBalancer] : protocol: TCP,UDP
iks-node[10.1.0.11],iks-node[10.1.0.12] => server-lb[LoadBalancer] : protocol: TCP,UDP
iks-node[10.1.0.11],iks-node[10.1.0.12],tvpc-spoke0-z1-worker[10.1.0.4] => iks-api-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.1.0.8],iks-clusterid:1[10.1.0.13],iks-registry-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.1.0.7] : protocol: TCP,UDP
iks-node[10.1.0.11],iks-node[10.1.0.12],tvpc-spoke0-z1-worker[10.1.0.4] => iks-api-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.2.0.8],iks-clusterid:1[10.2.0.13],iks-registry-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.2.0.7] : protocol: TCP,UDP
iks-node[10.1.0.11],iks-node[10.1.0.12],tvpc-spoke0-z1-worker[10.1.0.4] => iks-api-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.3.0.8],iks-clusterid:1[10.3.0.12],iks-registry-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.3.0.7] : protocol: TCP,UDP
iks-node[10.1.0.11],iks-node[10.1.0.12],tvpc-spoke0-z1-worker[10.1.0.4] => iks-node[10.1.0.11],iks-node[10.1.0.12],tvpc-spoke0-z1-worker[10.1.0.4] : All Connections
iks-node[10.1.0.11],iks-node[10.1.0.12],tvpc-spoke0-z1-worker[10.1.0.4] => iks-node[10.2.0.11],iks-node[10.2.0.12],tvpc-spoke0-z2-worker[10.2.0.4] : All Connections
iks-node[10.1.0.11],iks-node[10.1.0.12],tvpc-spoke0-z1-worker[10.1.0.4] => iks-node[10.3.0.10],iks-node[10.3.0.11],tvpc-spoke0-z3-worker[10.3.0.4] : All Connections
iks-node[10.2.0.11],iks-node[10.2.0.12] => kube-clusterid:1-124eeb9c05a2412c9c141445301ed38b[LoadBalancer] : protocol: TCP,UDP
iks-node[10.2.0.11],iks-node[10.2.0.12] => server-lb[LoadBalancer] : protocol: TCP,UDP
iks-node[10.2.0.11],iks-node[10.2.0.12],tvpc-spoke0-z2-worker[10.2.0.4] => iks-api-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.1.0.8],iks-clusterid:1[10.1.0.13],iks-registry-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.1.0.7] : protocol: TCP,UDP
iks-node[10.2.0.11],iks-node[10.2.0.12],tvpc-spoke0-z2-worker[10.2.0.4] => iks-api-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.2.0.8],iks-clusterid:1[10.2.0.13],iks-registry-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.2.0.7] : protocol: TCP,UDP
iks-node[10.2.0.11],iks-node[10.2.0.12],tvpc-spoke0-z2-worker[10.2.0.4] => iks-api-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.3.0.8],iks-clusterid:1[10.3.0.12],iks-registry-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.3.0.7] : protocol: TCP,UDP
iks-node[10.2.0.11],iks-node[10.2.0.12],tvpc-spoke0-z2-worker[10.2.0.4] => iks-node[10.1.0.11],iks-node[10.1.0.12],tvpc-spoke0-z1-worker[10.1.0.4] : All Connections
iks-node[10.2.0.11],iks-node[10.2.0.12],tvpc-spoke0-z2-worker[10.2.0.4] => iks-node[10.2.0.11],iks-node[10.2.0.12],tvpc-spoke0-z2-worker[10.2.0.4] : All Connections
iks-node[10.2.0.11],iks-node[10.2.0.12],tvpc-spoke0-z2-worker[10.2.0.4] => iks-node[10.3.0.10],iks-node[10.3.0.11],tvpc-spoke0-z3-worker[10.3.0.4] : All Connections
iks-node[10.3.0.10],iks-node[10.3.0.11] => kube-clusterid:1-124eeb9c05a2412c9c141445301ed38b[LoadBalancer] : protocol: TCP,UDP
iks-node[10.3.0.10],iks-node[10.3.0.11] => server-lb[LoadBalancer] : protocol: TCP,UDP
iks-node[10.3.0.10],iks-node[10.3.0.11],tvpc-spoke0-z3-worker[10.3.0.4] => iks-api-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.1.0.8],iks-clusterid:1[10.1.0.13],iks-registry-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.1.0.7] : protocol: TCP,UDP
iks-node[10.3.0.10],iks-node[10.3.0.11],tvpc-spoke0-z3-worker[10.3.0.4] => iks-api-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.2.0.8],iks-clusterid:1[10.2.0.13],iks-registry-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.2.0.7] : protocol: TCP,UDP
iks-node[10.3.0.10],iks-node[10.3.0.11],tvpc-spoke0-z3-worker[10.3.0.4] => iks-api-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.3.0.8],iks-clusterid:1[10.3.0.12],iks-registry-r006-e8ad3120-3346-4278-a008-bae1eb50172f[10.3.0.7] : protocol: TCP,UDP
iks-node[10.3.0.10],iks-node[10.3.0.11],tvpc-spoke0-z3-worker[10.3.0.4] => iks-node[10.1.0.11],iks-node[10.1.0.12],tvpc-spoke0-z1-worker[10.1.0.4] : All Connections
iks-node[10.3.0.10],iks-node[10.3.0.11],tvpc-spoke0-z3-worker[10.3.0.4] => iks-node[10.2.0.11],iks-node[10.2.0.12],tvpc-spoke0-z2-worker[10.2.0.4] : All Connections
iks-node[10.3.0.10],iks-node[10.3.0.11],tvpc-spoke0-z3-worker[10.3.0.4] => iks-node[10.3.0.10],iks-node[10.3.0.11],tvpc-spoke0-z3-worker[10.3.0.4] : All Connections
kube-clusterid:1-124eeb9c05a2412c9c141445301ed38b[LoadBalancer] => iks-node[10.1.0.11],iks-node[10.1.0.12] : protocol: TCP,UDP dst-ports: 30000-32767
kube-clusterid:1-124eeb9c05a2412c9c141445301ed38b[LoadBalancer] => iks-node[10.2.0.11],iks-node[10.2.0.12] : protocol: TCP,UDP dst-ports: 30000-32767
kube-clusterid:1-124eeb9c05a2412c9c141445301ed38b[LoadBalancer] => iks-node[10.3.0.10],iks-node[10.3.0.11] : protocol: TCP,UDP dst-ports: 30000-32767
server-lb[LoadBalancer] => iks-node[10.1.0.11],iks-node[10.1.0.12] : protocol: TCP,UDP dst-ports: 30000-32767
server-lb[LoadBalancer] => iks-node[10.2.0.11],iks-node[10.2.0.12] : protocol: TCP,UDP dst-ports: 30000-32767
server-lb[LoadBalancer] => iks-node[10.3.0.10],iks-node[10.3.0.11] : protocol: TCP,UDP dst-ports: 30000-32767
tvpc-spoke0-z1-worker[10.1.0.4] => Public Internet (all ranges) : All Connections
tvpc-spoke0-z1-worker[10.1.0.4] => kube-clusterid:1-124eeb9c05a2412c9c141445301ed38b[LoadBalancer] : protocol: TCP * 
tvpc-spoke0-z1-worker[10.1.0.4] => kube-clusterid:1-124eeb9c05a2412c9c141445301ed38b[LoadBalancer] : protocol: UDP
tvpc-spoke0-z1-worker[10.1.0.4] => server-lb[LoadBalancer] : protocol: TCP * 
tvpc-spoke0-z1-worker[10.1.0.4] => server-lb[LoadBalancer] : protocol: UDP
tvpc-spoke0-z2-worker[10.2.0.4] => Public Internet (all ranges) : All Connections
tvpc-spoke0-z2-worker[10.2.0.4] => kube-clusterid:1-124eeb9c05a2412c9c141445301ed38b[LoadBalancer] : protocol: TCP * 
tvpc-spoke0-z2-worker[10.2.0.4] => kube-clusterid:1-124eeb9c05a2412c9c141445301ed38b[LoadBalancer] : protocol: UDP
tvpc-spoke0-z2-worker[10.2.0.4] => server-lb[LoadBalancer] : protocol: TCP * 
tvpc-spoke0-z2-worker[10.2.0.4] => server-lb[LoadBalancer] : protocol: UDP
tvpc-spoke0-z3-worker[10.3.0.4] => Public Internet (all ranges) : All Connections
tvpc-spoke0-z3-worker[10.3.0.4] => kube-clusterid:1-124eeb9c05a2412c9c141445301ed38b[LoadBalancer] : protocol: TCP * 
tvpc-spoke0-z3-worker[10.3.0.4] => kube-clusterid:1-124eeb9c05a2412c9c141445301ed38b[LoadBalancer] : protocol: UDP
tvpc-spoke0-z3-worker[10.3.0.4] => server-lb[LoadBalancer] : protocol: TCP * 
tvpc-spoke0-z3-worker[10.3.0.4] => server-lb[LoadBalancer] : protocol: UDP

Endpoint connectivity for VPC tvpc-spoke1
Public Internet (all ranges) => kube-clusterid:8-c67f13d52fff45d7bdca157530557243[LoadBalancer] : protocol: TCP,UDP
Public Internet 147.235.211.134/32 => tvpc-spoke1-z1-worker[10.1.1.4] : protocol: TCP dst-ports: 22
Public Internet 147.235.211.134/32 => tvpc-spoke1-z2-worker[10.2.1.4] : protocol: TCP dst-ports: 22
Public Internet 147.235.211.134/32 => tvpc-spoke1-z3-worker[10.3.1.4] : protocol: TCP dst-ports: 22
iks-api-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.1.1.8],iks-clusterid:8[10.1.1.9],iks-registry-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.1.1.7] => iks-api-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.1.1.8],iks-clusterid:8[10.1.1.9],iks-node[10.1.1.5],iks-node[10.1.1.6],iks-registry-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.1.1.7],tvpc-spoke1-z1-worker[10.1.1.4] : protocol: TCP,UDP dst-ports: 30000-32767
iks-api-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.1.1.8],iks-clusterid:8[10.1.1.9],iks-registry-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.1.1.7] => iks-api-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.2.1.8],iks-clusterid:8[10.2.1.9],iks-node[10.2.1.5],iks-node[10.2.1.6],iks-registry-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.2.1.7],tvpc-spoke1-z2-worker[10.2.1.4] : protocol: TCP,UDP dst-ports: 30000-32767
iks-api-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.1.1.8],iks-clusterid:8[10.1.1.9],iks-registry-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.1.1.7] => iks-api-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.3.1.8],iks-clusterid:8[10.3.1.9],iks-node[10.3.1.5],iks-node[10.3.1.6],iks-registry-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.3.1.7],tvpc-spoke1-z3-worker[10.3.1.4] : protocol: TCP,UDP dst-ports: 30000-32767
iks-api-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.1.1.8],iks-clusterid:8[10.1.1.9],iks-registry-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.1.1.7] => kube-clusterid:8-c67f13d52fff45d7bdca157530557243[LoadBalancer] : protocol: TCP dst-ports: 30000-32767 * 
iks-api-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.1.1.8],iks-clusterid:8[10.1.1.9],iks-registry-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.1.1.7] => kube-clusterid:8-c67f13d52fff45d7bdca157530557243[LoadBalancer] : protocol: UDP dst-ports: 30000-32767
iks-api-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.1.1.8],iks-clusterid:8[10.1.1.9],iks-registry-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.1.1.7] => server1-lb[LoadBalancer] : protocol: TCP dst-ports: 30000-32767 * 
iks-api-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.1.1.8],iks-clusterid:8[10.1.1.9],iks-registry-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.1.1.7] => server1-lb[LoadBalancer] : protocol: UDP dst-ports: 30000-32767
iks-api-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.2.1.8],iks-clusterid:8[10.2.1.9],iks-registry-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.2.1.7] => iks-api-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.1.1.8],iks-clusterid:8[10.1.1.9],iks-node[10.1.1.5],iks-node[10.1.1.6],iks-registry-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.1.1.7],tvpc-spoke1-z1-worker[10.1.1.4] : protocol: TCP,UDP dst-ports: 30000-32767
iks-api-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.2.1.8],iks-clusterid:8[10.2.1.9],iks-registry-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.2.1.7] => iks-api-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.2.1.8],iks-clusterid:8[10.2.1.9],iks-node[10.2.1.5],iks-node[10.2.1.6],iks-registry-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.2.1.7],tvpc-spoke1-z2-worker[10.2.1.4] : protocol: TCP,UDP dst-ports: 30000-32767
iks-api-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.2.1.8],iks-clusterid:8[10.2.1.9],iks-registry-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.2.1.7] => iks-api-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.3.1.8],iks-clusterid:8[10.3.1.9],iks-node[10.3.1.5],iks-node[10.3.1.6],iks-registry-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.3.1.7],tvpc-spoke1-z3-worker[10.3.1.4] : protocol: TCP,UDP dst-ports: 30000-32767
iks-api-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.2.1.8],iks-clusterid:8[10.2.1.9],iks-registry-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.2.1.7] => kube-clusterid:8-c67f13d52fff45d7bdca157530557243[LoadBalancer] : protocol: TCP dst-ports: 30000-32767 * 
iks-api-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.2.1.8],iks-clusterid:8[10.2.1.9],iks-registry-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.2.1.7] => kube-clusterid:8-c67f13d52fff45d7bdca157530557243[LoadBalancer] : protocol: UDP dst-ports: 30000-32767
iks-api-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.2.1.8],iks-clusterid:8[10.2.1.9],iks-registry-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.2.1.7] => server1-lb[LoadBalancer] : protocol: TCP dst-ports: 30000-32767 * 
iks-api-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.2.1.8],iks-clusterid:8[10.2.1.9],iks-registry-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.2.1.7] => server1-lb[LoadBalancer] : protocol: UDP dst-ports: 30000-32767
iks-api-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.3.1.8],iks-clusterid:8[10.3.1.9],iks-registry-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.3.1.7] => iks-api-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.1.1.8],iks-clusterid:8[10.1.1.9],iks-node[10.1.1.5],iks-node[10.1.1.6],iks-registry-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.1.1.7],tvpc-spoke1-z1-worker[10.1.1.4] : protocol: TCP,UDP dst-ports: 30000-32767
iks-api-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.3.1.8],iks-clusterid:8[10.3.1.9],iks-registry-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.3.1.7] => iks-api-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.2.1.8],iks-clusterid:8[10.2.1.9],iks-node[10.2.1.5],iks-node[10.2.1.6],iks-registry-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.2.1.7],tvpc-spoke1-z2-worker[10.2.1.4] : protocol: TCP,UDP dst-ports: 30000-32767
iks-api-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.3.1.8],iks-clusterid:8[10.3.1.9],iks-registry-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.3.1.7] => iks-api-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.3.1.8],iks-clusterid:8[10.3.1.9],iks-node[10.3.1.5],iks-node[10.3.1.6],iks-registry-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.3.1.7],tvpc-spoke1-z3-worker[10.3.1.4] : protocol: TCP,UDP dst-ports: 30000-32767
iks-api-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.3.1.8],iks-clusterid:8[10.3.1.9],iks-registry-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.3.1.7] => kube-clusterid:8-c67f13d52fff45d7bdca157530557243[LoadBalancer] : protocol: TCP dst-ports: 30000-32767 * 
iks-api-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.3.1.8],iks-clusterid:8[10.3.1.9],iks-registry-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.3.1.7] => kube-clusterid:8-c67f13d52fff45d7bdca157530557243[LoadBalancer] : protocol: UDP dst-ports: 30000-32767
iks-api-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.3.1.8],iks-clusterid:8[10.3.1.9],iks-registry-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.3.1.7] => server1-lb[LoadBalancer] : protocol: TCP dst-ports: 30000-32767 * 
iks-api-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.3.1.8],iks-clusterid:8[10.3.1.9],iks-registry-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.3.1.7] => server1-lb[LoadBalancer] : protocol: UDP dst-ports: 30000-32767
iks-node[10.1.1.5],iks-node[10.1.1.6] => kube-clusterid:8-c67f13d52fff45d7bdca157530557243[LoadBalancer] : protocol: TCP,UDP
iks-node[10.1.1.5],iks-node[10.1.1.6] => server1-lb[LoadBalancer] : protocol: TCP,UDP
iks-node[10.1.1.5],iks-node[10.1.1.6],tvpc-spoke1-z1-worker[10.1.1.4] => iks-api-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.1.1.8],iks-clusterid:8[10.1.1.9],iks-registry-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.1.1.7] : protocol: TCP,UDP
iks-node[10.1.1.5],iks-node[10.1.1.6],tvpc-spoke1-z1-worker[10.1.1.4] => iks-api-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.2.1.8],iks-clusterid:8[10.2.1.9],iks-registry-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.2.1.7] : protocol: TCP,UDP
iks-node[10.1.1.5],iks-node[10.1.1.6],tvpc-spoke1-z1-worker[10.1.1.4] => iks-api-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.3.1.8],iks-clusterid:8[10.3.1.9],iks-registry-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.3.1.7] : protocol: TCP,UDP
iks-node[10.1.1.5],iks-node[10.1.1.6],tvpc-spoke1-z1-worker[10.1.1.4] => iks-node[10.1.1.5],iks-node[10.1.1.6],tvpc-spoke1-z1-worker[10.1.1.4] : All Connections
iks-node[10.1.1.5],iks-node[10.1.1.6],tvpc-spoke1-z1-worker[10.1.1.4] => iks-node[10.2.1.5],iks-node[10.2.1.6],tvpc-spoke1-z2-worker[10.2.1.4] : All Connections
iks-node[10.1.1.5],iks-node[10.1.1.6],tvpc-spoke1-z1-worker[10.1.1.4] => iks-node[10.3.1.5],iks-node[10.3.1.6],tvpc-spoke1-z3-worker[10.3.1.4] : All Connections
iks-node[10.2.1.5],iks-node[10.2.1.6] => kube-clusterid:8-c67f13d52fff45d7bdca157530557243[LoadBalancer] : protocol: TCP,UDP
iks-node[10.2.1.5],iks-node[10.2.1.6] => server1-lb[LoadBalancer] : protocol: TCP,UDP
iks-node[10.2.1.5],iks-node[10.2.1.6],tvpc-spoke1-z2-worker[10.2.1.4] => iks-api-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.1.1.8],iks-clusterid:8[10.1.1.9],iks-registry-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.1.1.7] : protocol: TCP,UDP
iks-node[10.2.1.5],iks-node[10.2.1.6],tvpc-spoke1-z2-worker[10.2.1.4] => iks-api-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.2.1.8],iks-clusterid:8[10.2.1.9],iks-registry-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.2.1.7] : protocol: TCP,UDP
iks-node[10.2.1.5],iks-node[10.2.1.6],tvpc-spoke1-z2-worker[10.2.1.4] => iks-api-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.3.1.8],iks-clusterid:8[10.3.1.9],iks-registry-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.3.1.7] : protocol: TCP,UDP
iks-node[10.2.1.5],iks-node[10.2.1.6],tvpc-spoke1-z2-worker[10.2.1.4] => iks-node[10.1.1.5],iks-node[10.1.1.6],tvpc-spoke1-z1-worker[10.1.1.4] : All Connections
iks-node[10.2.1.5],iks-node[10.2.1.6],tvpc-spoke1-z2-worker[10.2.1.4] => iks-node[10.2.1.5],iks-node[10.2.1.6],tvpc-spoke1-z2-worker[10.2.1.4] : All Connections
iks-node[10.2.1.5],iks-node[10.2.1.6],tvpc-spoke1-z2-worker[10.2.1.4] => iks-node[10.3.1.5],iks-node[10.3.1.6],tvpc-spoke1-z3-worker[10.3.1.4] : All Connections
iks-node[10.3.1.5],iks-node[10.3.1.6] => kube-clusterid:8-c67f13d52fff45d7bdca157530557243[LoadBalancer] : protocol: TCP,UDP
iks-node[10.3.1.5],iks-node[10.3.1.6] => server1-lb[LoadBalancer] : protocol: TCP,UDP
iks-node[10.3.1.5],iks-node[10.3.1.6],tvpc-spoke1-z3-worker[10.3.1.4] => iks-api-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.1.1.8],iks-clusterid:8[10.1.1.9],iks-registry-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.1.1.7] : protocol: TCP,UDP
iks-node[10.3.1.5],iks-node[10.3.1.6],tvpc-spoke1-z3-worker[10.3.1.4] => iks-api-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.2.1.8],iks-clusterid:8[10.2.1.9],iks-registry-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.2.1.7] : protocol: TCP,UDP
iks-node[10.3.1.5],iks-node[10.3.1.6],tvpc-spoke1-z3-worker[10.3.1.4] => iks-api-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.3.1.8],iks-clusterid:8[10.3.1.9],iks-registry-r006-86862082-a664-44d4-8001-f088ee99cc2b[10.3.1.7] : protocol: TCP,UDP
iks-node[10.3.1.5],iks-node[10.3.1.6],tvpc-spoke1-z3-worker[10.3.1.4] => iks-node[10.1.1.5],iks-node[10.1.1.6],tvpc-spoke1-z1-worker[10.1.1.4] : All Connections
iks-node[10.3.1.5],iks-node[10.3.1.6],tvpc-spoke1-z3-worker[10.3.1.4] => iks-node[10.2.1.5],iks-node[10.2.1.6],tvpc-spoke1-z2-worker[10.2.1.4] : All Connections
iks-node[10.3.1.5],iks-node[10.3.1.6],tvpc-spoke1-z3-worker[10.3.1.4] => iks-node[10.3.1.5],iks-node[10.3.1.6],tvpc-spoke1-z3-worker[10.3.1.4] : All Connections
kube-clusterid:8-c67f13d52fff45d7bdca157530557243[LoadBalancer] => iks-node[10.1.1.5],iks-node[10.1.1.6] : protocol: TCP,UDP dst-ports: 30000-32767
kube-clusterid:8-c67f13d52fff45d7bdca157530557243[LoadBalancer] => iks-node[10.2.1.5],iks-node[10.2.1.6] : protocol: TCP,UDP dst-ports: 30000-32767
kube-clusterid:8-c67f13d52fff45d7bdca157530557243[LoadBalancer] => iks-node[10.3.1.5],iks-node[10.3.1.6] : protocol: TCP,UDP dst-ports: 30000-32767
server1-lb[LoadBalancer] => iks-node[10.1.1.5],iks-node[10.1.1.6] : protocol: TCP,UDP dst-ports: 30000-32767
server1-lb[LoadBalancer] => iks-node[10.2.1.5],iks-node[10.2.1.6] : protocol: TCP,UDP dst-ports: 30000-32767
server1-lb[LoadBalancer] => iks-node[10.3.1.5],iks-node[10.3.1.6] : protocol: TCP,UDP dst-ports: 30000-32767
tvpc-spoke1-z1-worker[10.1.1.4] => Public Internet (all ranges) : All Connections
tvpc-spoke1-z1-worker[10.1.1.4] => kube-clusterid:8-c67f13d52fff45d7bdca157530557243[LoadBalancer] : protocol: TCP * 
tvpc-spoke1-z1-worker[10.1.1.4] => kube-clusterid:8-c67f13d52fff45d7bdca157530557243[LoadBalancer] : protocol: UDP
tvpc-spoke1-z1-worker[10.1.1.4] => server1-lb[LoadBalancer] : protocol: TCP * 
tvpc-spoke1-z1-worker[10.1.1.4] => server1-lb[LoadBalancer] : protocol: UDP
tvpc-spoke1-z2-worker[10.2.1.4] => Public Internet (all ranges) : All Connections
tvpc-spoke1-z2-worker[10.2.1.4] => kube-clusterid:8-c67f13d52fff45d7bdca157530557243[LoadBalancer] : protocol: TCP * 
tvpc-spoke1-z2-worker[10.2.1.4] => kube-clusterid:8-c67f13d52fff45d7bdca157530557243[LoadBalancer] : protocol: UDP
tvpc-spoke1-z2-worker[10.2.1.4] => server1-lb[LoadBalancer] : protocol: TCP * 
tvpc-spoke1-z2-worker[10.2.1.4] => server1-lb[LoadBalancer] : protocol: UDP
tvpc-spoke1-z3-worker[10.3.1.4] => Public Internet (all ranges) : All Connections
tvpc-spoke1-z3-worker[10.3.1.4] => kube-clusterid:8-c67f13d52fff45d7bdca157530557243[LoadBalancer] : protocol: TCP * 
tvpc-spoke1-z3-worker[10.3.1.4] => kube-clusterid:8-c67f13d52fff45d7bdca157530557243[LoadBalancer] : protocol: UDP
tvpc-spoke1-z3-worker[10.3.1.4] => server1-lb[LoadBalancer] : protocol: TCP * 
tvpc-spoke1-z3-worker[10.3.1.4] => server1-lb[LoadBalancer] : protocol: UDP

Endpoint connectivity for VPC tvpc-transit
Public Internet (all ranges) => tvpc-fw-z1-s3-0[10.1.15.196] : All Connections
Public Internet (all ranges) => tvpc-fw-z2-s3-0[10.2.15.196] : All Connections
Public Internet (all ranges) => tvpc-fw-z3-s3-0[10.3.15.196] : All Connections
Public Internet 147.235.211.134/32 => tvpc-transit-z1-worker[10.1.15.4] : protocol: TCP dst-ports: 22
Public Internet 147.235.211.134/32 => tvpc-transit-z2-worker[10.2.15.4] : protocol: TCP dst-ports: 22
Public Internet 147.235.211.134/32 => tvpc-transit-z3-worker[10.3.15.4] : protocol: TCP dst-ports: 22
tvpc-fw-z1-s3-0[10.1.15.196] => Public Internet (all ranges) : All Connections
tvpc-fw-z1-s3-0[10.1.15.196] => tvpc-fw-z2-s3-0[10.2.15.196] : All Connections
tvpc-fw-z1-s3-0[10.1.15.196] => tvpc-fw-z3-s3-0[10.3.15.196] : All Connections
tvpc-fw-z1-s3-0[10.1.15.196] => tvpc-transit-z1-worker[10.1.15.4] : All Connections
tvpc-fw-z1-s3-0[10.1.15.196] => tvpc-transit-z2-worker[10.2.15.4] : All Connections
tvpc-fw-z1-s3-0[10.1.15.196] => tvpc-transit-z3-worker[10.3.15.4] : All Connections
tvpc-fw-z2-s3-0[10.2.15.196] => Public Internet (all ranges) : All Connections
tvpc-fw-z2-s3-0[10.2.15.196] => tvpc-fw-z1-s3-0[10.1.15.196] : All Connections
tvpc-fw-z2-s3-0[10.2.15.196] => tvpc-fw-z3-s3-0[10.3.15.196] : All Connections
tvpc-fw-z2-s3-0[10.2.15.196] => tvpc-transit-z1-worker[10.1.15.4] : All Connections
tvpc-fw-z2-s3-0[10.2.15.196] => tvpc-transit-z2-worker[10.2.15.4] : All Connections
tvpc-fw-z2-s3-0[10.2.15.196] => tvpc-transit-z3-worker[10.3.15.4] : All Connections
tvpc-fw-z3-s3-0[10.3.15.196] => Public Internet (all ranges) : All Connections
tvpc-fw-z3-s3-0[10.3.15.196] => tvpc-fw-z1-s3-0[10.1.15.196] : All Connections
tvpc-fw-z3-s3-0[10.3.15.196] => tvpc-fw-z2-s3-0[10.2.15.196] : All Connections
tvpc-fw-z3-s3-0[10.3.15.196] => tvpc-transit-z1-worker[10.1.15.4] : All Connections
tvpc-fw-z3-s3-0[10.3.15.196] => tvpc-transit-z2-worker[10.2.15.4] : All Connections
tvpc-fw-z3-s3-0[10.3.15.196] => tvpc-transit-z3-worker[10.3.15.4] : All Connections
tvpc-transit-z1-worker[10.1.15.4] => Public Internet (all ranges) : All Connections
tvpc-transit-z1-worker[10.1.15.4] => tvpc-fw-z1-s3-0[10.1.15.196] : All Connections
tvpc-transit-z1-worker[10.1.15.4] => tvpc-fw-z2-s3-0[10.2.15.196] : All Connections
tvpc-transit-z1-worker[10.1.15.4] => tvpc-fw-z3-s3-0[10.3.15.196] : All Connections
tvpc-transit-z1-worker[10.1.15.4] => tvpc-transit-z2-worker[10.2.15.4] : All Connections
tvpc-transit-z1-worker[10.1.15.4] => tvpc-transit-z3-worker[10.3.15.4] : All Connections
tvpc-transit-z2-worker[10.2.15.4] => Public Internet (all ranges) : All Connections
tvpc-transit-z2-worker[10.2.15.4] => tvpc-fw-z1-s3-0[10.1.15.196] : All Connections
tvpc-transit-z2-worker[10.2.15.4] => tvpc-fw-z2-s3-0[10.2.15.196] : All Connections
tvpc-transit-z2-worker[10.2.15.4] => tvpc-fw-z3-s3-0[10.3.15.196] : All Connections
tvpc-transit-z2-worker[10.2.15.4] => tvpc-transit-z1-worker[10.1.15.4] : All Connections
tvpc-transit-z2-worker[10.2.15.4] => tvpc-transit-z3-worker[10.3.15.4] : All Connections
tvpc-transit-z3-worker[10.3.15.4] => Public Internet (all ranges) : All Connections
tvpc-transit-z3-worker[10.3.15.4] => tvpc-fw-z1-s3-0[10.1.15.196] : All Connections
tvpc-transit-z3-worker[10.3.15.4] => tvpc-fw-z2-s3-0[10.2.15.196] : All Connections
tvpc-transit-z3-worker[10.3.15.4] => tvpc-fw-z3-s3-0[10.3.15.196] : All Connections
tvpc-transit-z3-worker[10.3.15.4] => tvpc-transit-z1-worker[10.1.15.4] : All Connections
tvpc-transit-z3-worker[10.3.15.4] => tvpc-transit-z2-worker[10.2.15.4] : All Connections

TCP connections for which response is not permitted are marked with *
